Save/Update files [ci skip]

--- a/source/localisation/00_lanfang_l_english.yml
+++ b/source/localisation/00_lanfang_l_english.yml
@@ -65,7 +65,7 @@
  banjar_area:0 "バンジャール"
  johor_area:0 "ジョホール"
  north_malaya_area:0 "北マラヤ"
- tay_nguyen_area:0 "ターイグエン"
+ tay_nguyen_area:0 "ター・イグエン"
  angkor_area:0 "アンコール"
  sukhothai_area:0 "スコータイ"
  vientiane_area:0 "ヴィエンチャン"
@@ -434,8 +434,8 @@
  flavor_lxa.1.a:0 "僭称者どもをすり潰してくれようぞ。いずれな。"
  flavor_lxa.2.t:0 "ヴィエンチャン王国"
  flavor_lxa.2.d:0 "内戦が激化するにつれ、元ラーンサーンの王子が統治する独立王国としてヴィエンチャンが現れました。やがて、私たちが愛した国には何も残らないことでしょう。"
- flavor_lxa.3.t:0 "ルアンパバーン王国"
- flavor_lxa.3.d:0 "内戦が激化するにつれ、元ラーンサーンの王子が統治する独立王国としてルアンパバーンが現れました。やがて、私たちが愛した国には何も残らないことでしょう。"
+ flavor_lxa.3.t:0 "ルアン・パバーン王国"
+ flavor_lxa.3.d:0 "内戦が激化するにつれ、元ラーンサーンの王子が統治する独立王国としてルアン・パバーンが現れました。やがて、私たちが愛した国には何も残らないことでしょう。"
  restore_lan_xang_title:0 "ラーンサーンの再建"
  restore_lan_xang_desc:0 "ラオ族の大国家は粉々に砕け散った。最重要都市を制圧し、王位継承の競争者を排除して、国家の再統一を目指すのだ。"
  custom_idea_transport_power:0 "徒労"
