--- a/source/localisation/areas_regions_l_english.yml
+++ b/source/localisation/areas_regions_l_english.yml
@@ -1233,9 +1233,9 @@
  south_laos_area:0 "南ラオス"
  south_laos_area_name:0 "ヴィエンチャン"
  south_laos_area_adj:0 "ヴィエンチャン"
- north_laos_area:1 "ルアンパバーン"
- north_laos_area_name:0 "ルアンパバーン"
- north_laos_area_adj:0 "ルアンパバーン"
+ north_laos_area:1 "ルアン・パバーン"
+ north_laos_area_name:0 "ルアン・パバーン"
+ north_laos_area_adj:0 "ルアン・パバーン"
  central_thai_area:0 "タイ中部"
  central_thai_area_name:0 "アユタヤ"
  central_thai_area_adj:0 "アユタヤ"
@@ -1578,9 +1578,9 @@
  misiones_area:0 "メソポタミア"
  misiones_area_name:0 "ミシオネス"
  misiones_area_adj:0 "ミシオネス"
- west_sao_paolo_area:0 "グワイラ"
- west_sao_paolo_area_name:0 "グワイラ"
- west_sao_paolo_area_adj:0 "グワイラ"
+ west_sao_paolo_area:0 "グアイラ"
+ west_sao_paolo_area_name:0 "グアイラ"
+ west_sao_paolo_area_adj:0 "グアイラ"
  ceara_area:0 "セアラー"
  ceara_area_name:0 "セアラー"
  ceara_area_adj:0 "セアラー"
@@ -1767,13 +1767,13 @@
  susquehanna_area_name:1 "エリーイアナン"
  susquehanna_area_adj:1 "エリーイアナン"
  chesapeake_area:1 "バージニア"
- chesapeake_area_name:1 "テテロ"
- chesapeake_area_adj:1 "テテロ"
+ chesapeake_area_name:1 "トゥテーロ"
+ chesapeake_area_adj:1 "トゥテーロ"
  great_valley_area:0 "グレートバレー"
  great_valley_area_name:1 "マナホアック"
  great_valley_area_adj:1 "マナホアック"
  piedmont_north_america_area:0 "ピエモンテ"
- piedmont_north_america_area_name:1 "カトーバ"
+ piedmont_north_america_area_name:1 "カタウバ"
  piedmont_north_america_area_adj:1 "カトーバ"
  carolinas_area:1 "ノースカロライナ"
  carolinas_area_name:1 "クロアタン"
