--- a/source/localisation/countries_l_english.yml
+++ b/source/localisation/countries_l_english.yml
@@ -133,7 +133,7 @@
  LOA:0 "ロアンゴ"
  LOR:0 "ロレーヌ"
  LOU:0 "ルイジアナ"
- LUA:0 "ルアンパバーン"
+ LUA:0 "ルアン・パバーン"
  LUN:0 "リューネブルク"
  LUX:0 "ルクセンブルク"
  LXA:0 "ラーンサーン"
@@ -403,7 +403,7 @@
  LOA_ADJ:0 "ロアンゴ"
  LOR_ADJ:0 "ロレーヌ"
  LOU_ADJ:0 "ルイジアナ"
- LUA_ADJ:0 "ルアンパバーン"
+ LUA_ADJ:0 "ルアン・パバーン"
  LUN_ADJ:0 "リューネブルク"
  LUX_ADJ:0 "ルクセンブルク"
  LXA_ADJ:0 "ラーンサーン"
@@ -1237,12 +1237,12 @@
  BGL_ADJ:1 "バゲルカンド"
  UTS:1 "ツァン"
  UTS_ADJ:1 "ツァン"
- MMA:0 "モンマオ"
- MMA_ADJ:0 "モンマオ"
+ MMA:0 "モン・マオ"
+ MMA_ADJ:0 "モン・マオ"
  MKA:0 "モガウン"
  MKA_ADJ:0 "モガウン"
- MPA:0 "モンパイ"
- MPA_ADJ:0 "モンパイ"
+ MPA:0 "モン・パイ"
+ MPA_ADJ:0 "モン・パイ"
  KAL:0 "カレ"
  KAL_ADJ:0 "カレ"
  HSI:0 "シッポー"
