--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -388,7 +388,7 @@
  emp_hab_viennese_waltz_desc:0 "首都[Root.Capital.GetCapitalName]は繁栄し、我が国の統治者の地位と神聖ローマ帝国の真の首都の双方にふさわしい、音楽と高尚な文化の都となっている。"
  emp_hab_imperial_capitals_title:0 "帝国首都"
  emp_hab_imperial_capitals_desc:0 "我々は、確実に我が国の州の首都が自国の立地を反映するものにしなければならない。我が国の立地は神聖ローマ帝国が基盤とするものの強さの支柱であるからだ。"
- emp_hab_the_hungarian_question_title:0 "ハンガリー民族問題"
+ emp_hab_the_hungarian_question_title:0 "ハンガリー問題"
  emp_hab_the_hungarian_question_desc:0 "ハンガリーは我が帝国の中核をなす。しかし、ハンガリー国民は非常に独立心が高く、外国勢力への従属を快く思っていない。もし自国の安定性を守りたいなら、ハンガリーの州が自国の支配を心の底から受け入れるよう、ーどうにかしてー保証せねばならない。"
  emp_hab_all_minorities_are_welcome_title:0 "多文化帝国"
  emp_hab_all_minorities_are_welcome_desc:0 "東方面及び南方面に拡大したことで、ドイツ語を話さない外国人が帝国に流入し、その数は増加の一途を辿っている。自国が長期的に安定するかどうかについては、これら臣民をどれだけ効果的に統合できるか、という能力の有無で決まる。"
