--- a/source/localisation/prov_names_adj_l_english.yml
+++ b/source/localisation/prov_names_adj_l_english.yml
@@ -570,13 +570,13 @@
  PROV_ADJ579:0 "ミャウウー"
  PROV_ADJ580:0 "カレ"
  PROV_ADJ581:0 "ザガイン"
- PROV_ADJ582:0 "モンヤン"
+ PROV_ADJ582:0 "モン・ヤン"
  PROV_ADJ583:0 "センウィー"
  PROV_ADJ584:0 "アヴァ"
  PROV_ADJ585:0 "タウングー"
  PROV_ADJ586:0 "ペグー"
  PROV_ADJ587:0 "ケントゥン"
- PROV_ADJ588:0 "モンナイ"
+ PROV_ADJ588:0 "モン・ナイ"
  PROV_ADJ589:0 "チェンマイ"
  PROV_ADJ591:0 "タヴォイ"
  PROV_ADJ592:0 "ラーチャブリー"
@@ -602,8 +602,8 @@
  PROV_ADJ612:0 "コラート"
  PROV_ADJ613:0 "トンキン"
  PROV_ADJ614:0 "ヴィエンチャン"
- PROV_ADJ615:0 "ルアンパバーン"
- PROV_ADJ616:0 "カオバン"
+ PROV_ADJ615:0 "ルアン・パバーン"
+ PROV_ADJ616:0 "カオ・バン"
  PROV_ADJ617:1 "クタラジャ"
  PROV_ADJ618:1 "リアウ"
  PROV_ADJ619:0 "バタク"
@@ -1950,7 +1950,7 @@
  PROV_ADJ1961:0 "ラドガ"
  PROV_ADJ1962:0 "クドィムカル"
  PROV_ADJ1963:0 "チェールドィニ"
- PROV_ADJ1964:0 "ウスチ・スィソリスク"
+ PROV_ADJ1964:0 "ウスチ＝スィソリスク"
  PROV_ADJ1965:0 "ブズルーク"
  PROV_ADJ1966:0 "チェリャバ"
  PROV_ADJ1967:0 "フジャンド"
@@ -2350,20 +2350,20 @@
  PROV_ADJ2369:1 "上エシム"
  PROV_ADJ2370:0 "クングラート"
  PROV_ADJ2371:0 "ソングラ"
- PROV_ADJ2372:0 "ハイフォン"
+ PROV_ADJ2372:0 "ハイ・フォン"
  PROV_ADJ2373:0 "フエ"
  PROV_ADJ2374:0 "キタラー"
- PROV_ADJ2375:0 "ターイグエン"
+ PROV_ADJ2375:0 "ター・イグエン"
  PROV_ADJ2376:0 "プレク・ルセイ"
  PROV_ADJ2377:0 "トゥカマウ"
  PROV_ADJ2378:0 "クラチエ"
  PROV_ADJ2379:0 "バタンバン"
  PROV_ADJ2380:0 "プノンペン"
- PROV_ADJ2381:0 "ルアンナムター"
+ PROV_ADJ2381:0 "ルアン・ナムター"
  PROV_ADJ2382:0 "サワンナコーン"
  PROV_ADJ2383:0 "クッカナールシュリン"
- PROV_ADJ2384:0 "ノンカイ"
- PROV_ADJ2385:0 "ノーンブワラムプー"
+ PROV_ADJ2384:0 "ノン・カイ"
+ PROV_ADJ2385:0 "ノーンブワ・ラムプー"
  PROV_ADJ2386:0 "チャイヤプーム"
  PROV_ADJ2387:0 "ペッチャブリー"
  PROV_ADJ2388:0 "ピサヌローク"
@@ -2373,13 +2373,13 @@
  PROV_ADJ2392:0 "セランゴール"
  PROV_ADJ2393:0 "トレンガヌ"
  PROV_ADJ2394:0 "ケダ"
- PROV_ADJ2395:0 "チャムティロン"
+ PROV_ADJ2395:0 "チャムティ・ロン"
  PROV_ADJ2396:0 "モガウン"
  PROV_ADJ2397:0 "タマンティ"
  PROV_ADJ2398:0 "タンダ"
- PROV_ADJ2399:0 "バガン"
+ PROV_ADJ2399:0 "パガン"
  PROV_ADJ2400:0 "シッポー"
- PROV_ADJ2401:0 "モガパイ"
+ PROV_ADJ2401:0 "モン・パイ"
  PROV_ADJ2402:0 "サンドウェー"
  PROV_ADJ2404:0 "メルギー"
  PROV_ADJ2405:0 "ベンデル"
@@ -2419,7 +2419,7 @@
  PROV_ADJ2439:0 "ヤルマンカ"
  PROV_ADJ2440:0 "カギリン"
  PROV_ADJ2441:0 "イグリノー"
- PROV_ADJ2442:0 "ウスチ・クート"
+ PROV_ADJ2442:0 "ウスチ＝クート"
  PROV_ADJ2443:0 "カン"
  PROV_ADJ2444:0 "バーシュギルド"
  PROV_ADJ2445:0 "マンガゼヤ"
@@ -2657,7 +2657,7 @@
  PROV_ADJ2677:0 "ジャンビ"
  PROV_ADJ2678:0 "バンカ"
  PROV_ADJ2679:0 "ブリトゥン"
- PROV_ADJ2680:0 "ムコムコ"
+ PROV_ADJ2680:0 "ムコ＝ムコ"
  PROV_ADJ2681:0 "パガルユン"
  PROV_ADJ2682:0 "パリアマン"
  PROV_ADJ2683:0 "ムンタワイ"
@@ -2868,7 +2868,7 @@
  PROV_ADJ2888:0 "クイアバ"
  PROV_ADJ2889:0 "リオ・ブランコ"
  PROV_ADJ2890:0 "マラジョ"
- PROV_ADJ2891:0 "サントアントニオ・ダ・マンガ"
+ PROV_ADJ2891:0 "サント・アントニオ・ダ・マンガ"
  PROV_ADJ2892:0 "アラシャス"
  PROV_ADJ2893:0 "オファエ"
  PROV_ADJ2894:0 "サン・ジョアン・デル・レイ"
@@ -3090,7 +3090,7 @@
  PROV_ADJ4126:0 "バーチ"
  PROV_ADJ4127:0 "トゥルダ"
  PROV_ADJ4128:0 "キラーイフェルド"
- PROV_ADJ4129:0 "ウスチ・ヴィミ"
+ PROV_ADJ4129:0 "ウスチ＝ヴィミ"
  PROV_ADJ4130:0 "サマセット"
  PROV_ADJ4131:0 "陸奥"
  PROV_ADJ4139:0 "オウル湖"
