Save/Update files [ci skip]

--- a/source/localisation/prov_names_l_english.yml
+++ b/source/localisation/prov_names_l_english.yml
@@ -845,60 +845,60 @@
  PROV866:0 "グアイクラ"
  PROV867:0 "カウィーア"
  PROV868:0 "チュマシュ"
- PROV869:1 "T'epot'aha'l"
+ PROV869:1 "テーポターハール"
  PROV870:1 "ラキサムニ"
  PROV871:0 "ポーモ"
- PROV872:1 "Shayuusht'la"
+ PROV872:1 "シャイユースラ"
  PROV873:1 "チヌーク"
  PROV874:1 "ドゥワミッシュ"
  PROV875:1 "ターチーニー"
  PROV876:1 "ヤヴァパイ"
  PROV877:1 "アカメル"
- PROV878:1 "Kinyaa'aanii"
+ PROV878:1 "キンヤアアーニイ"
  PROV879:1 "ディー"
  PROV880:1 "オーケイ・オウィンゲ"
- PROV881:1 "Tsiahahéndé"
- PROV882:1 "Mashgaléndé"
+ PROV881:1 "ツィアハヘンデ"
+ PROV882:1 "マシュガレンデ"
  PROV883:1 "チェシャ"
  PROV884:1 "アウイア"
- PROV885:1 "Gulgahén"
+ PROV885:1 "グルガヘン"
  PROV886:0 "ウェーコ"
- PROV887:1 "Tickanwa'tic"
+ PROV887:1 "ティカンワーティク"
  PROV888:0 "アタカパ"
- PROV889:1 "Nawunena"
- PROV890:1 "Tokinahyup"
+ PROV889:1 "ナウネナ"
+ PROV890:1 "トキナヒュプ"
  PROV891:0 "ニシャ"
  PROV892:1 "キットキティシュ"
  PROV893:0 "チティマシャ"
- PROV894:1 "Kadohadacho"
+ PROV894:1 "カドーハダコ"
  PROV895:1 "アニルコ"
  PROV896:0 "イスカニ"
  PROV897:1 "キャスキ"
  PROV898:1 "カンザ"
  PROV899:0 "パハティ"
  PROV900:0 "タマロア"
- PROV901:1 "Tsawi"
- PROV902:1 "Niuachi"
+ PROV901:1 "ツァウィ"
+ PROV902:1 "ニウアチ"
  PROV903:0 "オマハ"
  PROV904:1 "ウォーペトンワン"
- PROV905:1 "Baxoje"
+ PROV905:1 "バーコジェ"
  PROV906:1 "ヤンクトナイ"
  PROV907:1 "ヤンクトンワン"
  PROV908:1 "シスストンワン"
  PROV909:1 "ヌエータ"
  PROV910:0 "マクア"
- PROV911:1 "Baawitigon"
- PROV912:1 "Osaakiiwaki"
+ PROV911:1 "バアウィチゴン"
+ PROV912:1 "オサアキイワキ"
  PROV913:1 "メスクワキ"
- PROV914:1 "Ho-Chunk"
- PROV915:1 "Peewareewa"
- PROV916:1 "Kaskankaham"
+ PROV914:1 "ホー・チャンク"
+ PROV915:1 "ペーワレーワ"
+ PROV916:1 "カスカンカハム"
  PROV917:0 "カホキア"
  PROV918:1 "チュカリッサ"
  PROV919:1 "チカシャ"
- PROV920:1 "Chahta"
- PROV921:1 "Ishenoca"
- PROV922:1 "Tohome"
+ PROV920:1 "チャータ"
+ PROV921:1 "イシェノカ"
+ PROV922:1 "トホメ"
  PROV923:0 "ペンサコーラ"
  PROV924:1 "タワサ"
  PROV925:1 "コウェタ"
@@ -910,29 +910,29 @@
  PROV931:0 "クーサ"
  PROV932:1 "イサティ"
  PROV933:1 "イスワ"
- PROV934:1 "Tsoyaha"
+ PROV934:1 "ツォヤハ"
  PROV935:1 "チアハ"
  PROV936:1 "ジョアラ"
  PROV937:1 "スカルレ"
  PROV938:1 "ポモウイク"
  PROV939:0 "カスキノンポ"
- PROV940:1 "Kentahke"
+ PROV940:1 "ケンターケ"
  PROV941:1 "ワーシオト"
- PROV942:1 "Waayaanthanwa"
+ PROV942:1 "ワアヤアンタンワ"
  PROV943:1 "アチャカンゴウエン"
  PROV944:1 "ボデワデミク"
  PROV945:1 "ミシガミ"
- PROV946:1 "Hotaawathipi"
+ PROV946:1 "ホタアワティピ"
  PROV947:1 "ケンタイエントンガ"
  PROV948:1 "オーイヨー"
  PROV949:0 "モナカン"
  PROV950:0 "チェサピーク"
  PROV951:0 "カナワ"
  PROV952:0 "ポウハタン"
- PROV953:1 "Piscataway"
+ PROV953:1 "ピスカタウェイ"
  PROV954:1 "エリーイアナン"
- PROV955:1 "Conestoga"
- PROV956:1 "Sakimauchheening"
+ PROV955:1 "コネストーガ"
+ PROV956:1 "サキマウチヘーンイング"
  PROV957:1 "ウィコンティス"
  PROV958:1 "オノドワガ"
  PROV959:1 "ガヨゴホーノ"
@@ -946,10 +946,10 @@
  PROV967:0 "ナラガンセット"
  PROV968:1 "マサチューセッツ"
  PROV969:1 "マヒカン"
- PROV970:1 "Amoskeag"
- PROV971:1 "Penapawsket"
+ PROV970:1 "アモスケイグ"
+ PROV971:1 "ペナパスケット"
  PROV972:1 "ヌーチャーヌルス"
- PROV973:1 "Skwxwu'mesh"
+ PROV973:1 "スコーミッシュ"
  PROV974:1 "クヮクヮキワク"
  PROV975:0 "ツィムシアン"
  PROV976:0 "トリンギット"
@@ -960,33 +960,33 @@
  PROV981:0 "タカンクク"
  PROV982:1 "オナマガグ"
  PROV983:1 "エパゴイットナーグ"
- PROV984:1 "Segepenegatic"
- PROV985:1 "Petkootkweak"
- PROV986:1 "Gespegeogag"
+ PROV984:1 "セゲペネガティック"
+ PROV985:1 "ペトコオトクウィーク"
+ PROV986:1 "ゲスぺゲオギャグ"
  PROV987:1 "オングイハラ"
  PROV988:1 "アティグナワンタン"
  PROV989:1 "アティネーノンナハク"
  PROV990:0 "メイソウナ"
- PROV991:1 "Odishkwaagamiig"
+ PROV991:1 "オディシュクワアガミイグ"
  PROV992:1 "ウェスカリニ"
  PROV993:1 "オシアガ"
  PROV994:0 "スタダコナ"
- PROV995:1 "Toutouskak"
+ PROV995:1 "トウトウスカク"
  PROV996:1 "オウマミウェ"
  PROV997:0 "チゼック"
  PROV998:0 "チキリュート"
  PROV999:0 "シサシピ"
  PROV1000:1 "イイウ"
- PROV1001:1 "Marameg"
+ PROV1001:1 "マラメグ"
  PROV1002:0 "アビティビ"
  PROV1003:0 "モソニ"
  PROV1004:0 "アタワピスカット"
- PROV1005:1 "Mushkegowuk"
- PROV1006:1 "Ahiarmiut"
- PROV1007:1 "Gojijiwininiwag"
+ PROV1005:1 "マスキーゴウク"
+ PROV1006:1 "アヒアルミウト"
+ PROV1007:1 "ゴジジウィニニワグ"
  PROV1008:1 "ウィーニビグ"
  PROV1009:0 "アティカキ"
- PROV1010:1 "Manitowapow"
+ PROV1010:1 "マニトワポウ"
  PROV1011:0 "キヌグリーニ"
  PROV1012:0 "薩摩"
  PROV1013:0 "清州"
@@ -1979,18 +1979,18 @@
  PROV2003:0 "クタクサ"
  PROV2004:1 "カイナー"
  PROV2005:1 "アサパスカ"
- PROV2006:1 "Ashalaho"
- PROV2007:1 "Sahnish"
- PROV2008:1 "Sihasapa"
+ PROV2006:1 "アシャラホ"
+ PROV2007:1 "サニッシュ"
+ PROV2008:1 "シハサパ"
  PROV2009:0 "オグララ"
  PROV2010:1 "ピクォート"
  PROV2011:1 "セネド"
- PROV2012:1 "Ersegonteog"
- PROV2013:1 "Allesikantekw"
+ PROV2012:1 "エルセゴンテオグ"
+ PROV2013:1 "アレシカンテクゥ"
  PROV2014:0 "ナキトシュ"
- PROV2015:1 "Outchibou"
+ PROV2015:1 "ニオウチボウ"
  PROV2016:1 "アマハミ"
- PROV2018:1 "Tsuu T'ina"
+ PROV2018:1 "ツウティナ"
  PROV2019:1 "ニミプ"
  PROV2020:1 "バナクワット"
  PROV2021:0 "ミウォク"
@@ -2439,36 +2439,36 @@
  PROV2473:0 "スース"
  PROV2474:1 "タジャリ"
  PROV2475:0 "ジャド"
- PROV2476:1 "Kuumeyay"
- PROV2477:1 "Ukom'nom"
+ PROV2476:1 "クミアイ"
+ PROV2477:1 "ウコムノム"
  PROV2478:0 "タチ"
  PROV2479:0 "マイドゥ"
  PROV2480:0 "シャスタ"
- PROV2481:1 "Maqlaqs"
+ PROV2481:1 "マクラクス"
  PROV2482:0 "カラプヤ"
- PROV2483:1 "Umatalum"
- PROV2484:1 "Aqokulo"
- PROV2485:1 "Kwaiailk"
- PROV2486:1 "Mamatchatpam"
+ PROV2483:1 "ウーマタルム"
+ PROV2484:1 "アコクロ"
+ PROV2485:1 "クワイアイルク"
+ PROV2486:1 "ママチャトパム"
  PROV2487:1 "スポケーン"
  PROV2488:0 "パルース"
- PROV2489:1 "Boho'inee"
- PROV2490:1 "Kusiutta"
+ PROV2489:1 "ボホーイネエ"
+ PROV2490:1 "クシュータ"
  PROV2491:1 "ワラパイ"
  PROV2492:1 "ベドンコヘ"
  PROV2493:1 "ホピトゥ"
  PROV2494:1 "シウィンナ"
  PROV2495:1 "アーク"
  PROV2496:1 "サーディンデ"
- PROV2497:1 "Tsès Sembai"
- PROV2498:1 "Tahuundé"
+ PROV2497:1 "ツェス・センバイ"
+ PROV2498:1 "タフウンドゥ"
  PROV2499:0 "コアウィルテコ"
- PROV2500:1 "Tel Kondaha"
+ PROV2500:1 "テル・コンダ"
  PROV2501:1 "ピーカニ"
  PROV2502:0 "ハニーニン"
  PROV2503:0 "アッシュッペ"
  PROV2504:0 "イーララピト"
- PROV2505:1 "Tsetsehesahese"
+ PROV2505:1 "ツェツェヘサヘセ"
  PROV2506:0 "クッカチクカ"
  PROV2507:0 "バチネンナ"
  PROV2508:0 "スキリ"
@@ -2477,23 +2477,23 @@
  PROV2511:0 "イプシェバイン"
  PROV2512:0 "ワペクート"
  PROV2513:0 "モインウェーナ"
- PROV2514:1 "Mishigamaw"
+ PROV2514:1 "ミシガマウ"
  PROV2515:0 "サトスデン"
  PROV2516:0 "アダイ"
  PROV2517:1 "ムデワカントンワン"
  PROV2518:0 "ノケ"
  PROV2519:0 "キラティカ"
  PROV2520:0 "メンコンキア"
- PROV2521:1 "Saginawe"
+ PROV2521:1 "サギナウェ"
  PROV2522:0 "マスカウテン"
  PROV2523:0 "ピアンカショー"
- PROV2524:1 "Waapi-nipi"
- PROV2525:1 "Chalahgawtha"
+ PROV2524:1 "ワアピ・ニピ"
+ PROV2525:1 "チャラウガウサ"
  PROV2526:0 "シャテラ"
  PROV2527:1 "アタリ"
  PROV2528:0 "ヤズー"
  PROV2529:0 "ナチェズ"
- PROV2530:1 "Taneks-Haya"
+ PROV2530:1 "タネイクス・ハヤ"
  PROV2531:1 "アビカ"
  PROV2532:1 "マヴィロ"
  PROV2533:0 "チャトト"
@@ -2514,40 +2514,40 @@
  PROV2548:0 "トゥテーロ"
  PROV2549:0 "モラトク"
  PROV2550:1 "ラッパハノック"
- PROV2551:1 "Calicula"
+ PROV2551:1 "カリキュラ"
  PROV2552:0 "マナホアック"
- PROV2553:1 "Patawomac"
+ PROV2553:1 "ポトマク"
  PROV2554:1 "ネンテゴー"
  PROV2555:0 "オニアソント"
- PROV2556:1 "Onojutta"
+ PROV2556:1 "オノジュタ"
  PROV2557:0 "アトラクウェイ"
  PROV2558:0 "エスパーカミー"
- PROV2559:1 "Tekontaroken"
- PROV2560:1 "Quiripi"
+ PROV2559:1 "テコンタロケン"
+ PROV2560:1 "クイリピ"
  PROV2561:0 "ワンパノアグ"
  PROV2562:1 "ペナクック"
  PROV2563:1 "ミシアシク"
  PROV2564:0 "ソコキ"
- PROV2565:1 "Kinnipekw"
- PROV2566:1 "Peskotomuhkati"
- PROV2567:1 "Tobique"
+ PROV2565:1 "キニペクゥ"
+ PROV2566:1 "ペスコトムウカティ"
+ PROV2567:1 "トビクェ"
  PROV2568:1 "ゲスポゴイトナグ"
  PROV2569:1 "エスキケオガグ"
- PROV2570:1 "Wolastoqiyik"
+ PROV2570:1 "ウォラストキイク"
  PROV2571:0 "マダワスカ"
- PROV2572:1 "Sigenigteogag"
+ PROV2572:1 "シグニグテオガグ"
  PROV2573:0 "プラセンシア"
  PROV2574:0 "シクミット"
  PROV2575:0 "ナスカピ"
- PROV2576:1 "Ekuanitshu"
- PROV2577:1 "Pessamu"
- PROV2578:1 "Notiskuan"
+ PROV2576:1 "エクアニトシュ"
+ PROV2577:1 "ペサアム"
+ PROV2578:1 "ノティスクアン"
  PROV2579:1 "ペクアカミウルヌアトシュ"
  PROV2580:0 "アティカメク"
  PROV2581:0 "ティミスカミング"
- PROV2582:1 "Animouski"
- PROV2583:1 "Kikonteku"
- PROV2584:1 "Masoliantekw"
+ PROV2582:1 "アニモウスキ"
+ PROV2583:1 "キコンテク"
+ PROV2584:1 "マソリアンテクゥ"
  PROV2585:1 "アレンダロノン"
  PROV2586:0 "タイオノンタッティ"
  PROV2587:0 "オダワ"
@@ -2557,19 +2557,19 @@
  PROV2591:0 "オートリブ"
  PROV2592:1 "マスケコワク"
  PROV2593:0 "ワップス"
- PROV2594:1 "Quennebigonhelini"
- PROV2595:1 "Kes-ye-hot'inne"
+ PROV2594:1 "クエンネビゴンヘリニ"
+ PROV2595:1 "ケスイェホティーネ"
  PROV2596:0 "マヒミキンイヤク"
  PROV2597:0 "シピウィニニワク"
- PROV2598:1 "Ye Xa Yabine"
+ PROV2598:1 "イェ・カ・ヤビネ"
  PROV2599:1 "アヤバスカウィーニワク"
  PROV2600:0 "ニヒタワク"
- PROV2601:1 "Dane-zaa"
+ PROV2601:1 "ダネーザア"
  PROV2602:0 "シクシカワ"
- PROV2603:1 "Tsek'ene"
+ PROV2603:1 "セカニ"
  PROV2604:0 "ダケル"
  PROV2605:0 "セクワプン"
- PROV2606:1 "Tsilhoqot'in"
+ PROV2606:1 "チルコーティン"
  PROV2607:1 "サイロークス"
  PROV2608:0 "ロッキー山脈"
  PROV2609:0 "ニスガ"
@@ -3705,16 +3705,16 @@
  PROV4626:0 "ポタノ"
  PROV4627:0 "タヌ"
  PROV4628:0 "ニタエンデ"
- PROV4629:1 "Ndawe Qoha"
+ PROV4629:1 "ンダウェ・コハー"
  PROV4630:0 "ナタエンデ"
  PROV4631:1 "ナフラット"
  PROV4632:1 "ツィーヤ"
  PROV4633:0 "ソバイプリ"
- PROV4634:1 "Tsék'aadn"
+ PROV4634:1 "チェカードン"
  PROV4635:0 "タークタム"
  PROV4636:0 "チョイヌムニ"
  PROV4637:0 "オローニ"
- PROV4638:1 "Wint'uh"
+ PROV4638:1 "ウィントゥン"
  PROV4639:0 "パイパイ"
  PROV4640:0 "テクパティトラン"
  PROV4641:0 "ヒロテペック"
