Save/Update files [ci skip]

--- a/source/localisation/astu_1_31_l_english.yml
+++ b/source/localisation/astu_1_31_l_english.yml
@@ -10,20 +10,20 @@
  CONFIRM_CENTRALIZE_STATE:0 "$STATE$のステートの集権化"
  CONFIRM_CENTRALIZE_STATE_TEXT:1 "$PROVINCE|Y$州に$STATE|Y$を集中させ、その統治コストを$REDUCTION|0Y$削減するため、政府改革進捗度を$COST|0Y$を使用して本当に構いませんか？これには$YEARS|0Y$年かかります。"
  CENTRALIZE_STATE_CONSTRUCTION_TITLE:0 "ステートの集権化が完了"
- CENTRALIZE_STATE_CONSTRUCTION_SETUP:0 "ステートの集権化が完了した場合。"
+ CENTRALIZE_STATE_CONSTRUCTION_SETUP:0 "ステートの集権化が完了したとき"
  CENTRALIZE_STATE_CONSTRUCTION_1:0 "ステートの集権化を完了"
  CENTRALIZE_STATE_CONSTRUCTION_2:0 "$PROVINCE$での工事が完了しました。"
  CENTRALIZE_STATE_CONSTRUCTION_3:1 "今、$STATE|Y$はステート集権化されてます。"
  CENTRALIZE_STATE_CONSTRUCTION_LOG:0 "$PROVINCE$でのステート集権化工事が完了"
  CENTRALIZE_STATE_CONSTRUCTION_BTN1:0 "OK"
  CENTRALIZE_STATE_CONSTRUCTION_CANCEL_TITLE:0 "ステートの集権化の中止"
- CENTRALIZE_STATE_CONSTRUCTION_CANCEL_SETUP:0 "領有者の変更やステートがテリトリーに変更されたことによって、ステートの集権化が中止された場合。"
+ CENTRALIZE_STATE_CONSTRUCTION_CANCEL_SETUP:0 "領有者の変更やステートがテリトリーに変更されたことによって、ステートの集権化が中止されたとき"
  CENTRALIZE_STATE_CONSTRUCTION_CANCEL_1:0 "ステートの集権化の中止"
  CENTRALIZE_STATE_CONSTRUCTION_CANCEL_2:0 "$PROVINCE$での工事を中止しました。"
  CENTRALIZE_STATE_CONSTRUCTION_CANCEL_LOG:0 "$PROVINCE$でのステートの集権化工事を中止"
  CENTRALIZE_STATE_CONSTRUCTION_CANCEL_BTN1:0 "OK"
  CENTRALIZE_STATE_CANCEL_TITLE:0 "ステートの集権化工事が解除されました"
- CENTRALIZE_STATE_CANCEL_SETUP:0 "領有者の変更によってステートの集権化工事が解除された場合"
+ CENTRALIZE_STATE_CANCEL_SETUP:0 "領有者の変更によってステートの集権化工事が解除されたとき"
  CENTRALIZE_STATE_CANCEL_1:0 "ステートの集権化工事が解除されました"
  CENTRALIZE_STATE_CANCEL_2:0 "$PROVINCE$での工事は解除されました。"
  CENTRALIZE_STATE_CANCEL_3:1 "そのステートの州をすべて領有していません。"
@@ -35,7 +35,7 @@
  CENTRALIZE_STATE_CAPITAL:0 "首都のあるステートは集権化できません。"
  WARNING_CONSTRUCTION_LOST:0 "新しい州に港がなければ、艦船の建造は中止になります。"
  CONSTRUCTION_LOST_TITLE:0 "艦船の建造中止"
- CONSTRUCTION_LOST_SETUP:0 "移住する際、新しい州では無効なので、いくつかの工事が解除されます。"
+ CONSTRUCTION_LOST_SETUP:0 "新しい州で無効になったために一部の移住が解除されたとき"
  CONSTRUCTION_LOST_1:0 "工事の中止"
  CONSTRUCTION_LOST_2:0 "移住によって、艦船の建造は中止されました。"
  CONSTRUCTION_LOST_3:0 "港がないと、艦船の建造は出来ません。"
