--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -112,7 +112,7 @@
  emp_mission_events.10.d:0 "百年戦争中、アランソン公はイングランド軍の侵攻により自らの領土を追われた。公国の伝統的な領土がフランスの手に戻った今、ヴァロワ=アランソン家の生き残った貴族たちは、[Root.Monarch.GetTitle]に対し、失われた領土と称号の回復を求めている。"
  emp_mission_events.10.a:0 "アランソンを返還しよう。"
  emp_mission_events.10.b:0 "以後、アランソンは王領としよう。"
- EST_VAL_DUKE_OF_ALENCON:0 "アランソン公爵：§Y$VAL$%§!"
+ EST_VAL_DUKE_OF_ALENCON:0 "アランソン公爵: §Y$VAL$%§!"
  admiralty_reform:0 "海軍本部委員会"
  admiralty_reform_desc:0 "我々の盛衰の如何は海上で力を発揮できるかどうかにかかっている。そのため、我々は政府の手綱を海軍本部委員会に引き渡した。彼らは経験豊富で愛国心に溢れていて、非の打ちどころがない。\n\n選挙を無効にします。"
  protectorate_parliament_reform:0 "護国卿議会"
@@ -1280,7 +1280,7 @@
  KING_PALATINE:0 "宮中王"
  COUNTESS_PALATINE:0 "女宮中伯"
  QUEEN_PALATINE:0 "女宮中王"
- EST_VAL_VIJ_PROTECT_JAINS:0 "ジャイナ教社会の保護：§G$VAL$§!"
+ EST_VAL_VIJ_PROTECT_JAINS:0 "ジャイナ教社会の保護: §G$VAL$§!"
  imperial_diplomacy_reform:0 "帝国の外交"
  imperial_diplomacy_reform_desc:0 "都市は皇帝や他の同盟国の支援なしでは独立を維持できない。我々は外交関係を強化し、また、我々が窮地に陥った際には友が都市を防衛すると請け合うようにすることに注力すべきだ。"
  municipal_self_defense_reform:0 "都市の自衛"
@@ -1906,14 +1906,14 @@
  great_peasants_war_concessions_triggered_modifier:0 "農民への譲歩"
  desc_great_peasants_war_concessions_triggered_modifier:0 "大農民戦争は帝国に対して農民の権利を再考することを強制した。多くの譲歩が与えられ、古い特権が保証されたため、彼らの労働力から富を引き出す能力は減少している。"
  gpw_concessions_triggered_modifier_tt:0 "補正§Y「農民への譲歩」§!が有効となり、農民共和国ではない神聖ローマ帝国の加盟国に§R-5%§!の国家税収補正が与えられます。"
- EST_VAL_GREAT_PEASANTS_WAR_NOBLES_WIN_MINOR_INFLUENCE:0 "縮小された農民の権利：§Y$VAL$%§!"
- EST_VAL_GREAT_PEASANTS_WAR_NOBLES_WIN_MINOR_LOYALTY:0 "廃止された農民の権利：§Y$VAL$%§!"
- EST_VAL_GREAT_PEASANTS_WAR_NOBLES_WIN_MAJOR_INFLUENCE:0 "縮小された農民の権利：§Y$VAL$%§!"
- EST_VAL_GREAT_PEASANTS_WAR_NOBLES_WIN_MAJOR_LOYALTY:0 "廃止された農民の権利：§Y$VAL$%§!"
- EST_VAL_GREAT_PEASANTS_WAR_NOBLES_LOSE_MINOR_INFLUENCE:0 "保証された農民の権利：§Y$VAL$%§!"
- EST_VAL_GREAT_PEASANTS_WAR_NOBLES_LOSE_MINOR_LOYALTY:0 "保証された農民の権利：§Y$VAL$%§!"
- EST_VAL_GREAT_PEASANTS_WAR_NOBLES_LOSE_MAJOR_INFLUENCE:0 "付与された農民の特権：§Y$VAL$%§!"
- EST_VAL_GREAT_PEASANTS_WAR_NOBLES_LOSE_MAJOR_LOYALTY:0 "付与された農民の特権：§Y$VAL$%§!"
+ EST_VAL_GREAT_PEASANTS_WAR_NOBLES_WIN_MINOR_INFLUENCE:0 "縮小された農民の権利: §Y$VAL$%§!"
+ EST_VAL_GREAT_PEASANTS_WAR_NOBLES_WIN_MINOR_LOYALTY:0 "廃止された農民の権利: §Y$VAL$%§!"
+ EST_VAL_GREAT_PEASANTS_WAR_NOBLES_WIN_MAJOR_INFLUENCE:0 "縮小された農民の権利: §Y$VAL$%§!"
+ EST_VAL_GREAT_PEASANTS_WAR_NOBLES_WIN_MAJOR_LOYALTY:0 "廃止された農民の権利: §Y$VAL$%§!"
+ EST_VAL_GREAT_PEASANTS_WAR_NOBLES_LOSE_MINOR_INFLUENCE:0 "保証された農民の権利: §Y$VAL$%§!"
+ EST_VAL_GREAT_PEASANTS_WAR_NOBLES_LOSE_MINOR_LOYALTY:0 "保証された農民の権利: §Y$VAL$%§!"
+ EST_VAL_GREAT_PEASANTS_WAR_NOBLES_LOSE_MAJOR_INFLUENCE:0 "付与された農民の特権: §Y$VAL$%§!"
+ EST_VAL_GREAT_PEASANTS_WAR_NOBLES_LOSE_MAJOR_LOYALTY:0 "付与された農民の特権: §Y$VAL$%§!"
  incident_great_peasants_war:0 "農民たちの運命"
  incident_great_peasants_war_member_alert:0 "農民と支配階級の間の激しい紛争は、神聖ローマ帝国内で何十年にもわたり猛威を振るっている。皇帝が確固とした最終的な解決策を執行する時が来た。農民の権利を保護するか、あるいは貴族による支配を強いるかである。"
  incident_great_peasants_war_emperor_alert:0 "農民と支配階級の間の激しい紛争は、神聖ローマ帝国内で何十年にもわたり猛威を振るっている。皇帝が確固とした最終的な解決策を執行する時が来た。農民の権利を保護するか、あるいは貴族による支配を強いるかである。"
@@ -3161,7 +3161,7 @@
  emp_mission_events.1.b:0 "我々はアヴィニョンを割譲などしない！"
  legitimate_subject_elector_modifer:0 "正統な従属国の選帝侯"
  desc_legitimate_subject_elector_modifer:0 "この国家は、帝国の他の選帝侯の非難なしに、従属国として保持することができる。"
- EST_VAL_PUNISHMENT_FOR_SINS:0 "罪の罰：§Y$VAL$%§!"
+ EST_VAL_PUNISHMENT_FOR_SINS:0 "罪の罰: §Y$VAL$%§!"
  dutch_revolt.3.d:0 "皇帝がオランダ独立の正当な根拠を支持することを拒否したため、オランダは神聖ローマ帝国からの離脱を宣言した。帝国の保護を避け、我々は世界において自身の道を進んでいかなければならない。"
  dutch_revolt.3.a:0 "我らに皇帝など不要だ。"
  dutch_revolt.3.b:0 "待て、我らには帝国が必要だ！"
@@ -3249,7 +3249,7 @@
  vedic_education_tt:0 "[Root.Capital.GetAreaName]にまだ存在しない最新の制度への進捗度に§G25§!を追加します。"
  same_govt_as_root_tt:0 "[Root.GetName]と同じ政体である"
  imperial_ban_fallback_tt:0 "すべての中核州を§Y[Root.GetName]§!が領有しています。"
- EST_VAL_HEATHEN_PEACE_LOYALTY:0 "異教徒との戦争中ではない：§G$VAL$§!"
+ EST_VAL_HEATHEN_PEACE_LOYALTY:0 "異教徒との戦争中ではない: §G$VAL$§!"
  emperor_trying_to_avert_shadow_kingdom_tt:0 "皇帝は正式にイタリアを統制することを決断しています"
  opinion_left_hre:0 "帝国からの離脱"
  desc_bought_indulgence:0 "教皇から免罪符を購入した。"
