--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -686,7 +686,7 @@
  ESTATE_PRIVILEGE_PENALTIES:0 "この特権には以下のペナルティがあります：\n$MODIFIERS$\n\n"
  PROVINCE_PRODUCE_PLU:0 "$PROVINCE$は$GOODS$を生産している"
  PROVINCE_DONT_PRODUCE_PLU:0 "$PROVINCE$は$GOODS$を生産していない"
- EST_INWARD_PERFECTION_OFFENSIVE_WAR:0 "内的爛熟を伴う拡張主義戦争："
+ EST_INWARD_PERFECTION_OFFENSIVE_WAR:0 "内的爛熟を伴う拡張主義戦争:"
  MODIFIER_STABILITY_COST_TO_DECLAR_WAR:0 "宣戦布告による安定度への打撃"
  MODIFIER_DISENGAGEMENT_CHANCE:0 "艦船撤退確率"
  ESTATE_LOYALTY_VS_INFLUENCE_GREATER_THAN:0 "§Y$ESTATE$§Wの忠誠度が彼らの影響力以上である。"
@@ -881,9 +881,9 @@
  MONOPOLY_INCOME_WINE_DESC:0 "ワイン生産から"
  MONOPOLY_INCOME_SLAVES_DESC:0 "奴隷生産から"
  ESTATE_PRIVILEGE_COOLDOWN:0 "$DATE|Y$までは取り消しできません"
- ESTATE_PRIVILEGE_LOYALTY_CHANGE:1 "$MOD$：$VALUE|+0%$\n"
- ESTATE_PRIVILEGE_INFLUENCE_CHANGE:1 "$MOD$：$VALUE|+0%$\n"
- ESTATE_PRIVILEGE_MAX_ABSOLUTISM_CHANGE:1 "最大絶対主義：$VALUE|+0$\n"
+ ESTATE_PRIVILEGE_LOYALTY_CHANGE:1 "$MOD$: $VALUE|+0%$\n"
+ ESTATE_PRIVILEGE_INFLUENCE_CHANGE:1 "$MOD$: $VALUE|+0%$\n"
+ ESTATE_PRIVILEGE_MAX_ABSOLUTISM_CHANGE:1 "最大絶対主義: $VALUE|+0$\n"
  ESTATES_PRIVILEGES_LOYALTY_VALUE:0 "$VALUE|+%0$"
  ESTATES_PRIVILEGES_INFLUENCE_VALUE:0 "$VALUE|Y%0$"
  ESTATES_PRIVILEGES_LANDSHARE_VALUE:0 "$VALUE|+&0$"
@@ -946,7 +946,7 @@
  estate_dhimmi_ownership:0 "[Country.GetDhimmiName]階級の土地所有権"
  estate_jains_ownership:0 "[Country.GetJainsName]階級の土地所有権"
  estate_rajput_ownership:0 "[Country.GetRajputsName]階級の土地所有権"
- ESTATE_OWNERSHIP_INFLUENCE:0 "$ESTATE$の影響力：$VALUE|1Y&$\n"
+ ESTATE_OWNERSHIP_INFLUENCE:0 "$ESTATE$の影響力: $VALUE|1Y&$\n"
  ESTATE_OWNERSHIP_MOD:0 "$MOD$"
  NO_PICKED_BULL:0 "未選択"
  NUM_COUNCIL_CARDINALS:0 "$NUM$"
