--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -755,7 +755,7 @@
  muslim_piety.13.a:1 "我々は神秘主義者の支持を受け入れることはできない。"
  muslim_piety.13.b:1 "神は善良なり"
  muslim_piety.14.t:1 "コーヒーとタバコ"
- muslim_piety.14.d:1 "コーヒーやタバコのような興奮剤の利用は、我々の社会にとって非常に新しいものである一方、コーヒーハウスと共に今や[Root.Capital.GetCapitalName]から[coffee_province.GetAreaName]までの共通の目玉として急速に普及している。この人気は特にスーフィー教団の中で顕著である。これらの目新しさは、宗教的支配層が適切な利用に関して対立していることを意味している。\n厳格な法律家の多くは、コーヒーとタバコの両方が国内で非常に人気があるため、大衆が注意を払うようになるまで利用を制限するよう求めている。[coffee_province.GetName]の代官は、コーヒーハウスを閉鎖したくて今や[Root.Capital.GetCapitalName]を頼ってきた。彼は、ここが反体制派のための会合場所になると信じ込んでいる。"
+ muslim_piety.14.d:1 "我々の社会にとって非常に新しいものであるにもかかわらず、コーヒーやタバコなど興奮作用のある嗜好品が急速に普及しており、それに伴いコーヒーハウスは今や[Root.Capital.GetCapitalName]から[coffee_province.GetAreaName]までどこでも見られるようになった。これらは特にスーフィー教団に好まれている。これらは新規のものであるがゆえに、適切な利用に関して宗教的権威の中でも意見が分かれている。\n厳格な法律家の多くはこれらの利用を制限するよう求めてきているが、一方では慎重に議論すべきという者もいる。コーヒーとタバコのどちらも国内で非常に人気があるためだ。[coffee_province.GetName]の代官が、州内のコーヒーハウスの閉鎖許可を求めて今[Root.Capital.GetCapitalName]に戻ってきている。彼は、コーヒーハウスが反体制派の会合場所になると信じている。"
  muslim_piety.14.a:1 "制限を課そう"
  muslim_piety.14.b:1 "コーヒーを飲ませよう"
  muslim_piety.15.t:1 "[new_province.GetName]でスーフィー教団の人気が高まっている"
