--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -459,8 +459,8 @@
  estate_yangban_scholars:0 "両班の学者"
  estate_yangban_administrators:0 "両班の行政官"
  estate_neoconfucian_reformers:0 "宋明理学の改革派"
- EST_KOR_FACTIONAL_UPHEAVAL:1 "派閥抗争：§Y$VAL$§!"
- EST_KOR_FACTIONAL_UNITY:1 "派閥の終焉：§Y$VAL$§!"
+ EST_KOR_FACTIONAL_UPHEAVAL:1 "派閥抗争: §Y$VAL$§!"
+ EST_KOR_FACTIONAL_UNITY:1 "派閥の終焉: §Y$VAL$§!"
  flavor_kor.7.t:0 "高御座の確保"
  flavor_kor.7.d:1 "京都は陥落し、日本の幕府は崩壊しました。朝鮮軍が都市に進入し、組織的な略奪が行われたことで、都市の生存者たちが嘆き悲しみ、縮み上がっている中、朝鮮と日本間の長年にわたる対立により蓄積された憎悪はついに解消されました。その過程で、彼らは信じられないほど多くの略奪品を溜め込んでおり、その大半は朝鮮半島へと戻っていくでしょう。\n\n調度品の中で最重要なものは、7世紀から日本の天皇が座っていたという高御座です。[Root.GetRulerTitleAndNameOrRegencyCap]は、高御座を[Root.Capital.GetCapitalName]へと持って行き、朝鮮[Root.GovernmentName]の宝物の中で最高位の場所で陳列するように命じました。"
  flavor_kor.7.opt:0 "朝鮮に栄光あれ！"
