--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -616,7 +616,7 @@
  legacy_of_the_navigator_desc:1 "エンリケ航海王子はポルトガルのジョアン1世の三男であった。王にはなれないことを知っていた彼は、探険及び航海技術発展の促進、調査遠征の資金調達、海軍問題に関する知識収集、海軍技術の進歩の奨励に生涯を費やした。この功績は今でも残っており、水夫や提督たちがより大きな偉業の達成に向けての後押しとして刺激を与え続けてくれている。"
  case_de_india:0 "在外商館"
  case_de_india_desc:0 "インド洋交易の支配を確立するには、東方の大陸の各地に在外商館を設置すべきだ。アフリカ及びインド沿岸に沿うようにして、堅固に要塞化された交易拠点の網を構築することで、多大な資源を費やすことなく現地の交易を支配できるだろう。"
- the_bandeirantes:0 "バンデイランテス"
+ the_bandeirantes:0 "バンデイランテスの奨励"
  the_bandeirantes_desc:0 "奴隷探しを目的として編成された遠征隊の中には、金やその他稀少な金属及び宝石を偶然発見する者たちもいた。これらの噂は、我が植民地を探検しようとする勇敢な男たちにとっての後押しになるだろう。"
  royal_absolutism:0 "絶対王政"
  royal_absolutism_desc:0 "あまりにも長い間、王権は貴族の愚かな介入によって制限されてきた。その貴族の狭い地域の利害が王国のより大きな利益を脅かしているのだ。彼らの議会を解体し、貴族たちの干渉を受けることなく支配を行う必要がある。"
