--- a/source/localisation/rule_britannia_l_english.yml
+++ b/source/localisation/rule_britannia_l_english.yml
@@ -234,7 +234,7 @@
  desc_fancy_vestments:0 "聖職者は、公共の場でより精巧な祭服を着用している。もちろんこれは非常に印象的だ。"
  nonconformist_anglican_monarch:0 "非国教徒の君主"
  desc_nonconformist_anglican_monarch:0 "君主は教会の首長であるにもかかわらず、未だ信仰に従っていない。"
- EST_VAL_VESTMENTS_BANNED:0 "聖職者の祭服の禁止：§Y$VAL$%§!"
+ EST_VAL_VESTMENTS_BANNED:0 "聖職者の祭服の禁止: §Y$VAL$%§!"
  innovativeness:0 "革新性"
  NEWS_BANNER_OK_TOOLTIP:0 "閉じて二度と表示しない。"
  critical_press:1 "不義なる印刷"
@@ -464,7 +464,7 @@
  NO_CONFORM_TO_TEMPLATE_MOVE_LOCKED_NAVY:0 "§R動きがロックされている間、艦隊をテンプレートに適合させることはできません。§!"
  REFILL_GARRISON_NOT_CONTROLLED:0 "要塞が自国または同盟国に支配されていません。"
  COMMONS_REFORM_CHURCH:1 "教会の一般的な改革：§Y$VAL$%§!"
- EST_VAL_PUBLIC_SCHOOLS:1 "公立学校：§Y$VAL$%§!"
+ EST_VAL_PUBLIC_SCHOOLS:1 "公立学校: §Y$VAL$%§!"
  PHYSIOCRACY:1 "重農主義：§Y$VAL$%§!"
  desc_city_of_the_kings:0 "王がゴンダールに帰ってきた。"
  PROVINCE_IS_NOT_ON_AN_ISLAND:1 "$PROVINCE|Y$は、島にはありません。\n"
