--- a/source/localisation/cradle_of_civilization_l_english.yml
+++ b/source/localisation/cradle_of_civilization_l_english.yml
@@ -394,7 +394,7 @@
  muslim_school_events.23.d:0 "有名なスーフィーの墓につながる聖堂を後援する、あるいは提供することは、長い間、ウラマーの主要な論点であった。より伝統的な世代の権力を握っている彼らは、今この慣習を取り締まろうとするために支配者に圧力をかけている。"
  muslim_school_events.23.a:0 "彼らの言う通りにしなければ。"
  muslim_school_events.23.b:0 "いや。古い指導者は偉大な人物だった！"
- EST_VAL_NEO_SUFISM:1 "新スーフィー主義と伝統主義：§Y$VAL$%§!"
+ EST_VAL_NEO_SUFISM:1 "新スーフィー主義と伝統主義: §Y$VAL$%§!"
  compile_x_fiqh_title:0 "[Root.GetReligiousSchool]のフィクフを翻訳"
  compile_x_fiqh_desc:0 "最も博識なウラマーでさえ、シャリーアを最もうまく適用する方法は必ずしも明確ではなく、何世紀にもわたり、いくつかの地域で多くの矛盾した判決が出現している。王国の最高の精神が[Root.GetReligiousSchool]のフィクフの包括的な批評を翻訳して執筆することを可能にするため、かなりの時間と努力を費やした場合、これは我々の王国のすべてのカーディーとムフティーにとって非常に大きな助けとなるだろう。"
  compile_x_fiqh_tooltip_part1:0 "[Root.Monarch.GetName]のファトワ＝イの翻訳には長い年月がかかり、その間、以下の補正が有効になります："
