--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -1855,7 +1855,7 @@
  emp_mission_events.5.t:0 "教皇による戴冠"
  emp_mission_events.5.d:0 "我々は、キリストの牧師である教皇[PAP.Monarch.GetName]との最終的かつ恒久的な合意に達した。この日から、教皇聖下は個人的に神聖ローマ皇帝を戴冠するだろう。\n帝国の領土内では皇帝が教会に対して事実上優勢であり、教皇と皇帝の間で何世紀にもわたってしばしば行われた激しい紛争に終わりをもたらすという合意にも達した。"
  emp_mission_events.5.a:0 "我々こそ真のローマ帝国だ。"
- EST_VAL_GER_URBAN:0 "ドイツの都市化：§G$VAL$%§!"
+ EST_VAL_GER_URBAN:0 "ドイツの都市化: §G$VAL$%§!"
  industrialized_rhineland:0 "ラインラントの工業化"
  desc_industrialized_rhineland:0 "我々のラインラントへの投資は急速な工業化を引き起こしている。"
  ger_german_education:0 "ドイツの教育"
@@ -1990,7 +1990,7 @@
  french_minors_become_france_title:0 "王位の簒奪"
  french_minors_become_france_desc:1 "[Root.Monarch.GetName]が[Root.Monarch.GetHerHim]自身のためにフランス王位を奪取する時が来た。旧政権は新体制に道を開くため、完全に破壊されなければならない。"
  own_all_cores_fra_minors:0 "§Y[Root.GetAdjective]§!の中核州をすべて領有する。"
- EST_VAL_GERMAN_JUNKERS:0 "忠実なユンカー：§G$VAL$%§!"
+ EST_VAL_GERMAN_JUNKERS:0 "忠実なユンカー: §G$VAL$%§!"
  guardians_of_the_fountain:0 "泉の守護者"
  desc_guardians_of_the_fountain:0 "我々は主から、若返りの泉を価値のない魂から守るように命じられた。このため、我々は水を飲んで我々の命を守り、長年の奉仕を続けている。"
  swi_empire_tt:0 "帝国事件「スイスと帝国」がある"
@@ -2199,8 +2199,8 @@
  emp_mlo_swiss_mercs_trigger_tooltip:0 "§Y[Root.GetName]§!が§Yスイス§!または§Yロマンディ§!の傭兵を使って戦争に勝利した。"
  emp_gen_safety_at_home_and_abroad_trigger:0 "§Yイタリア§!地方に自身の州を領有している全ての国家：\n  以下のいずれかが満たされている：\n    §Y[Root.GetName]§!と同盟している\n    §Y[Root.GetName]§!よりも陸軍が小規模である"
  add_5_crown_land_share:0 "§Y[Root.GetName]§!は§G5§!の直轄地の所有権を獲得します。"
- VAL_HAB_BALANCED_ESTATES:0 "バランスの取れた階級：§G$VAL$§!"
- VAL_BUR_APPEASED_ESTATES:0 "宥められた階級：§G$VAL$§!"
+ VAL_HAB_BALANCED_ESTATES:0 "バランスの取れた階級: §G$VAL$§!"
+ VAL_BUR_APPEASED_ESTATES:0 "宥められた階級: §G$VAL$§!"
  VAL_BAV_DEALT_WITH_ILLUMINATI:0 "イルミナティと取引した：§G$VAL$§!"
  bav_bavarian_absolutism:0 "啓蒙的専制主義"
  desc_bav_bavarian_absolutism:0 "国家は啓蒙的専制主義の理想を採用している。"
