--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -8,7 +8,7 @@
  MACRO_INCREASE_SAILORS_DESC:0 "この建造物は水兵は$VAL$増加させます。"
  MACRO_REDUCE_MAINTENANCE_DESC:0 "この建造物は維持費を$VAL$減少させます。"
  MISSIONCANCELLED_TITLE:0 "任務中止"
- MISSIONCANCELLED_SETUP:0 "我々のユニットの任務が中止されたとき。"
+ MISSIONCANCELLED_SETUP:0 "我々のユニットの任務が中止されたとき"
  MISSIONCANCELLED_HEADER:0 "$MESSENGER$"
  MISSIONCANCELLED_1:0 "$TYPE$の任務が中止された"
  MISSIONCANCELLED_2:0 "$TYPE$の"
@@ -75,7 +75,7 @@
  EStopMissionReason_UserAction:0 "それを止めました。"
  TO_REVOKE_PRIVILEGE_INTRO:0 "特権を無効にする場合："
  NEWACTIVELOYALISTCARDINAL_TITLE:0 "新しい枢機卿を選出した"
- NEWACTIVELOYALISTCARDINAL_SETUP:0 "新しい枢機卿を選んだ時です。"
+ NEWACTIVELOYALISTCARDINAL_SETUP:0 "新しい枢機卿を選んだとき"
  NEWACTIVELOYALISTCARDINAL_HEADER:0 "教皇庁からのお知らせ"
  NEWACTIVELOYALISTCARDINAL_1:0 "新しい枢機卿"
  NEWACTIVELOYALISTCARDINAL_2:0 "§Y$PROVINCE$§Wは今、新しい枢機卿の座にあります。"
@@ -288,7 +288,7 @@
  EXTEND_REGENCY_PERFORM:0 "$HEIR|Y$の摂政を$YEARS$年延期します。\nこの行動により、$LEGITIMACY_HIT|R$の正統性が打撃を受けます。"
  EXTEND_REGENCY_TITLE:0 "摂政の延長！"
  COUNTRY_HAS_BEEN_PILLAGED_TITLE:0 "首都を収奪した！"
- COUNTRY_HAS_BEEN_PILLAGED_SETUP:0 "自国の首都が収奪された時。"
+ COUNTRY_HAS_BEEN_PILLAGED_SETUP:0 "自国の首都が収奪されたとき"
  COUNTRY_HAS_BEEN_PILLAGED_HEADER:0 "知事からの報告"
  COUNTRY_HAS_BEEN_PILLAGED_1:0 "ひどい知らせだ！"
  COUNTRY_HAS_BEEN_PILLAGED_2:0 "首都のあるステート$STATE$"
@@ -313,12 +313,12 @@
  FORCEBREAKALLIANCEDESC_NON_GREAT_POWER:0 "彼らが受け入れた場合、$WITH|Y$は自国に対する評価を下げ、自国に対して開戦事由を獲得します。\nこれにより、自国は好感度$FAVOURS$を失います。\n同じく、これにより$COUNTRY|Y$と$WITH$の間で停戦が成立します。"
  USING_FAVORS:0 "好感度の使用："
  refused_to_break_alliance_favor:0 "同盟破棄を拒否した"
- BREAKALLIANCE_FAVORTITLE:0 "同盟破棄"
+ BREAKALLIANCE_FAVORTITLE:0 "同盟を破棄する"
  BREAK_ALLIANCE_FAVOR_DESC2:0 "好感度$FAVOR|Y$を使用して、彼らの同盟関係の一つを破棄させます。"
  BREAK_ALLIANCE_FAVOR_DESC:0 "$THEM|Y$の$WITH|Y$に対する同盟関係の解消を求めます。"
  BREAK_ALLIANCE_FAVOR_REQDES1:0 "$ACTOR|Y$は、自国が$THEM|Y$との同盟を破棄することを求めています。\nこれにより、自国と$ACTOR|Y$との間は停戦となり、自国が$THEM|Y$と締結済みの他の外交条約も無効となります。"
  WEFORCEDBREAKALLIANCE_FAVOR_TITLE:0 "同盟を破棄させる"
- WEFORCEDBREAKALLIANCE_FAVOR_SETUP:0 "他国に好感度をもって、同盟破棄を求める時。"
+ WEFORCEDBREAKALLIANCE_FAVOR_SETUP:0 "我々が他国に好感度をもって同盟破棄を求めたとき"
  WEFORCEDBREAKALLIANCE_FAVOR_HEADER:0 "$MESSENGER$"
  WEFORCEDBREAKALLIANCE_FAVOR_1:0 "同盟破棄"
  WEFORCEDBREAKALLIANCE_FAVOR_2:0 "$MONARCHTITLE$、我々は$RECIPIENT$に対し、"
@@ -331,7 +331,7 @@
  WEFORCEDBREAKALLIANCE_FAVOR_BTN2:0 "OK"
  WEFORCEDBREAKALLIANCE_FAVOR_BTN3:0 "移動"
  FORCEDBREAKALLIANCE_FAVOR_TITLE:0 "同盟を破棄させる"
- FORCEDBREAKALLIANCE_FAVOR_SETUP:0 "他国に好感度をもって同盟破棄を求めた時。"
+ FORCEDBREAKALLIANCE_FAVOR_SETUP:0 "ある国が他国に好感度をもって同盟破棄を求めたとき"
  FORCEDBREAKALLIANCE_FAVOR_HEADER:0 "使者"
  FORCEDBREAKALLIANCE_FAVOR_1:0 "$ACTOR$"
  FORCEDBREAKALLIANCE_FAVOR_2:0 "$MONARCHTITLE$、国家$ACTOR$は"
@@ -344,7 +344,7 @@
  FORCEDBREAKALLIANCE_FAVOR_BTN2:0 "OK"
  FORCEDBREAKALLIANCE_FAVOR_BTN3:0 "移動"
  OTHERFORCEDBREAKALLIANCE_FAVOR_TITLE:0 "同盟を破棄させる"
- OTHERFORCEDBREAKALLIANCE_FAVOR_SETUP:0 "ある国が他の国に同盟の破棄を要求した時。"
+ OTHERFORCEDBREAKALLIANCE_FAVOR_SETUP:0 "ある国が他国に同盟破棄を要求したとき"
  OTHERFORCEDBREAKALLIANCE_FAVOR_HEADER:0 "使者"
  OTHERFORCEDBREAKALLIANCE_FAVOR_1:0 "$ACTOR$"
  OTHERFORCEDBREAKALLIANCE_FAVOR_2:0 "$MONARCHTITLE$、国家$ACTOR$は"
@@ -356,7 +356,7 @@
  OTHERFORCEDBREAKALLIANCE_FAVOR_BTN2:0 "OK"
  OTHERFORCEDBREAKALLIANCE_FAVOR_BTN3:0 "移動"
  FORCEDALLYBREAKALLIANCE_FAVOR_TITLE:0 "同盟を破棄させる"
- FORCEDALLYBREAKALLIANCE_FAVOR_SETUP:0 "ある国が我々の同盟国に我々との同盟の破棄を要求した時。"
+ FORCEDALLYBREAKALLIANCE_FAVOR_SETUP:0 "ある国が我々の同盟国に同盟破棄を要求したとき"
  FORCEDALLYBREAKALLIANCE_FAVOR_HEADER:0 "使者"
  FORCEDALLYBREAKALLIANCE_FAVOR_1:0 "$ACTOR$"
  FORCEDALLYBREAKALLIANCE_FAVOR_2:0 "$MONARCHTITLE$、国家$ACTOR$は"
@@ -368,7 +368,7 @@
  FORCEDALLYBREAKALLIANCE_FAVOR_BTN2:0 "OK"
  FORCEDALLYBREAKALLIANCE_FAVOR_BTN3:0 "移動"
  BREAKALLIANCE_FAVOR_DECLINED_TITLE:0 "好感度を用いた同盟破棄の要求は拒否された"
- BREAKALLIANCE_FAVOR_DECLINED_SETUP:0 "ある国が同盟の破棄を拒否した時。"
+ BREAKALLIANCE_FAVOR_DECLINED_SETUP:0 "ある国が同盟破棄を拒否したとき"
  BREAKALLIANCE_FAVOR_DECLINED_HEADER:0 "同盟破棄の要求の拒否"
  BREAKALLIANCE_FAVOR_DECLINED_1:0 "$RECIPIENT$"
  BREAKALLIANCE_FAVOR_DECLINED_2:0 "自国の要求である"
@@ -379,7 +379,7 @@
  BREAKALLIANCE_FAVOR_DECLINED_BTN2:0 "クソッたれ"
  BREAKALLIANCE_FAVOR_DECLINED_BTN3:0 "移動"
  WE_RETURN_CORE_TITLE:0 "中核州の返還"
- WE_RETURN_CORE_SETUP:0 "同盟国に中核州を変換する時。"
+ WE_RETURN_CORE_SETUP:0 "我々が同盟国に中核州を変換したとき"
  WE_RETURN_CORE_HEADER:0 "$MESSENGER$"
  WE_RETURN_CORE_1:0 "州は返還されました。"
  WE_RETURN_CORE_2:0 "$MONARCHTITLE$、私たちは好感度をもって"
@@ -393,7 +393,7 @@
  WE_RETURN_CORE_BTN3:0 "移動"
  WE_RETURN_CORE_MAP:0 "返還された！"
  RETURN_CORE_TITLE:0 "中核州の返還"
- RETURN_CORE_SETUP:0 "同盟国から週の返還があった時。"
+ RETURN_CORE_SETUP:0 "我々が同盟国から州の返還があったとき"
  RETURN_CORE_HEADER:0 "$MESSENGER$"
  RETURN_CORE_1:0 "州は返還されました。"
  RETURN_CORE_2:0 "$MONARCHTITLE$、私たちは好感度をもって"
@@ -407,7 +407,7 @@
  RETURN_CORE_BTN3:0 "移動"
  RETURN_CORE_MAP:0 "返還された！"
  OTHER_RETURN_CORE_TITLE:0 "中核州の返還"
- OTHER_RETURN_CORE_SETUP:0 "ある国が好感度によって他国に中核州を返還させた時。"
+ OTHER_RETURN_CORE_SETUP:0 "ある国が好感度をもって他国に中核州を返還させたとき"
  OTHER_RETURN_CORE_HEADER:0 "使者"
  OTHER_RETURN_CORE_1:0 "$RECIPIENT$"
  OTHER_RETURN_CORE_2:0 "$RECIPIENT$はその州の一つを"
@@ -420,7 +420,7 @@
  OTHER_RETURN_CORE_BTN3:0 "移動"
  OTHER_RETURN_CORE_MAP:0 "返還された！"
  THEYDECLINE_RETURN_CORE_TITLE:0 "中核州返還を拒否した"
- THEYDECLINE_RETURN_CORE_SETUP:0 "自国の中核州返還要求が拒否された時。"
+ THEYDECLINE_RETURN_CORE_SETUP:0 "自国の中核州返還要求が拒否されたとき"
  THEYDECLINE_RETURN_CORE_HEADER:0 "$MESSENGER$"
  THEYDECLINE_RETURN_CORE_1:0 "返還は拒否されました"
  THEYDECLINE_RETURN_CORE_2:0 "$MONARCHTITLE$、$RECIPIENT$は"
@@ -446,7 +446,7 @@
  reduced_opinion_favor:0 "好感度を用いて評価を減少させた"
  refused_to_reduce_opinion_favor:0 "他国の評価を減少させることを拒否した"
  WE_REDUCED_OPINION_FAVOR_TITLE:0 "評価の減少"
- WE_REDUCED_OPINION_FAVOR_SETUP:0 "ある国に好感度を盛って他の国に対する評価を下げてもらう時。"
+ WE_REDUCED_OPINION_FAVOR_SETUP:0 "我々がある国に好感度をもって対する評価を下げるよう要求したとき"
  WE_REDUCED_OPINION_FAVOR_HEADER:0 "$MESSENGER$"
  WE_REDUCED_OPINION_FAVOR_1:0 "評価の減少"
  WE_REDUCED_OPINION_FAVOR_2:0 "$MONARCHTITLE$、国家$RECIPIENT$に好感度をもって"
@@ -457,7 +457,7 @@
  WE_REDUCED_OPINION_FAVOR_BTN2:0 "OK"
  WE_REDUCED_OPINION_FAVOR_BTN3:0 "移動"
  REDUCED_OPINION_FAVOR_TITLE:0 "評価の減少"
- REDUCED_OPINION_FAVOR_SETUP:0 "ある国が我が国に対して他国への評価を下げるよう好感度によって要求した時。"
+ REDUCED_OPINION_FAVOR_SETUP:0 "ある国が我々に好感度をもって他国への評価を下げるよう要求したとき"
  REDUCED_OPINION_FAVOR_HEADER:0 "使者"
  REDUCED_OPINION_FAVOR_1:0 "$ACTOR$"
  REDUCED_OPINION_FAVOR_2:0 "$MONARCHTITLE$、国家$ACTOR$から好感度をもって"
@@ -469,7 +469,7 @@
  REDUCED_OPINION_FAVOR_BTN2:0 "OK"
  REDUCED_OPINION_FAVOR_BTN3:0 "移動"
  OTHER_REDUCED_OPINION_FAVOR_TITLE:0 "評価を減少させる"
- OTHER_REDUCED_OPINION_FAVOR_SETUP:0 "ある国が他の国に対して第三国への評価を下げるよう要求した時。"
+ OTHER_REDUCED_OPINION_FAVOR_SETUP:0 "ある国が他国に対して第三国への評価を下げるよう要求したとき"
  OTHER_REDUCED_OPINION_FAVOR_HEADER:0 "使者"
  OTHER_REDUCED_OPINION_FAVOR_1:0 "$ACTOR$"
  OTHER_REDUCED_OPINION_FAVOR_2:0 "$MONARCHTITLE$、国家$ACTOR$が好感度をもって"
@@ -481,7 +481,7 @@
  OTHER_REDUCED_OPINION_FAVOR_BTN2:0 "OK"
  OTHER_REDUCED_OPINION_FAVOR_BTN3:0 "移動"
  NATION_REDUCED_OPINION_OF_US_FAVOR_TITLE:0 "評価を減少させる"
- NATION_REDUCED_OPINION_OF_US_FAVOR_SETUP:0 "ある国が我らの友好国に我々に対しての評価を下げるよう要求した時。"
+ NATION_REDUCED_OPINION_OF_US_FAVOR_SETUP:0 "ある国が我らの友好国に対して我々への評価を下げるよう要求したとき"
  NATION_REDUCED_OPINION_OF_US_FAVOR_HEADER:0 "使者"
  NATION_REDUCED_OPINION_OF_US_FAVOR_1:0 "$ACTOR$"
  NATION_REDUCED_OPINION_OF_US_FAVOR_2:0 "$MONARCHTITLE$、国家$ACTOR$は好感度をもって"
@@ -493,7 +493,7 @@
  NATION_REDUCED_OPINION_OF_US_FAVOR_BTN2:0 "OK"
  NATION_REDUCED_OPINION_OF_US_FAVOR_BTN3:0 "移動"
  REDUCED_OPINION_FAVOR_DECLINED_TITLE:0 "好感度を用いた評価を減らす要求について拒否しました"
- REDUCED_OPINION_FAVOR_DECLINED_SETUP:0 "ある国が他国への評価を下げるのを拒否した時。"
+ REDUCED_OPINION_FAVOR_DECLINED_SETUP:0 "ある国が他国への評価を下げるのを拒否したとき"
  REDUCED_OPINION_FAVOR_DECLINED_HEADER:0 "評価の減少要求の拒否"
  REDUCED_OPINION_FAVOR_DECLINED_1:0 "$RECIPIENT$"
  REDUCED_OPINION_FAVOR_DECLINED_2:0 "は、好感度をもって$WITH|Y$ @$TAG$の評価を"
@@ -515,7 +515,7 @@
  SELECT_COUNTRY_TO_REDUCE_RELATIONS_WITH:0 "彼らの評価を減らすために、国を選択してください。"
  BREAKALLIANCE_NOTHING_SELECTED_DESC:0 "$THEM|Y$の同盟を破棄させたい場合に国家を選択します。"
  WE_TRADE_FAVORS_FOR_GOLD_TITLE:0 "ダカットを好感度と交換する"
- WE_TRADE_FAVORS_FOR_GOLD_SETUP:0 "ある国に好感度をもって金の提供をを求める時。"
+ WE_TRADE_FAVORS_FOR_GOLD_SETUP:0 "我々がある国に好感度をもって金の提供を求めたとき"
  WE_TRADE_FAVORS_FOR_GOLD_HEADER:0 "$MESSENGER$"
  WE_TRADE_FAVORS_FOR_GOLD_1:0 "好感度とダカットの取引"
  WE_TRADE_FAVORS_FOR_GOLD_2:0 "$MONARCHTITLE$、国家$RECIPIENT$に、"
@@ -526,7 +526,7 @@
  WE_TRADE_FAVORS_FOR_GOLD_BTN2:0 "OK"
  WE_TRADE_FAVORS_FOR_GOLD_BTN3:0 "移動"
  TRADE_FAVORS_FOR_GOLD_TITLE:0 "ダカットを好感度と交換する"
- TRADE_FAVORS_FOR_GOLD_SETUP:0 "ある国が我らに対して好感度によって金銭を要求した時。"
+ TRADE_FAVORS_FOR_GOLD_SETUP:0 "ある国が我々に好感度をもって金銭を要求したとき"
  TRADE_FAVORS_FOR_GOLD_HEADER:0 "使者"
  TRADE_FAVORS_FOR_GOLD_1:0 "$ACTOR$"
  TRADE_FAVORS_FOR_GOLD_2:0 "$MONARCHTITLE$、国家$ACTOR$は"
@@ -538,7 +538,7 @@
  TRADE_FAVORS_FOR_GOLD_BTN2:0 "OK"
  TRADE_FAVORS_FOR_GOLD_BTN3:0 "移動"
  OTHER_TRADE_FAVORS_FOR_GOLD_TITLE:0 "ダカットを好感度と交換する"
- OTHER_TRADE_FAVORS_FOR_GOLD_SETUP:0 "ある国が他国に、好感度をもって金銭を求める時。"
+ OTHER_TRADE_FAVORS_FOR_GOLD_SETUP:0 "ある国が他国に好感度をもって金銭を求めたとき"
  OTHER_TRADE_FAVORS_FOR_GOLD_HEADER:0 "使者"
  OTHER_TRADE_FAVORS_FOR_GOLD_1:0 "$ACTOR$"
  OTHER_TRADE_FAVORS_FOR_GOLD_2:0 "$MONARCHTITLE$、国家$ACTOR$は"
@@ -550,7 +550,7 @@
  OTHER_TRADE_FAVORS_FOR_GOLD_BTN2:0 "OK"
  OTHER_TRADE_FAVORS_FOR_GOLD_BTN3:0 "移動"
  TRADE_FAVORS_FOR_GOLD_DECLINED_TITLE:0 "好感度を用いた金銭の要求は拒否されました"
- TRADE_FAVORS_FOR_GOLD_DECLINED_SETUP:0 "ある国が他の国に好感度と引き換えにダカットの提供を拒否した時。"
+ TRADE_FAVORS_FOR_GOLD_DECLINED_SETUP:0 "ある国が他国に好感度と引き換えにしたダカットの提供を拒否したとき"
  TRADE_FAVORS_FOR_GOLD_DECLINED_HEADER:0 "好感度によるダカットの要求は拒否されました"
  TRADE_FAVORS_FOR_GOLD_DECLINED_1:0 "$RECIPIENT$"
  TRADE_FAVORS_FOR_GOLD_DECLINED_2:0 "は、好感度$FAVOR|Y$と引き換えに"
@@ -569,7 +569,7 @@
  TRADE_FAVORS_FOR_GOLD_DESC2:0 "$MONTHS$カ月分の収入（$CASH|Y$¤）と引き換えに$FAVOR|Y$の好感度を使います。"
  TRADE_FAVORS_FOR_GOLD_DESC:0 "$RECIPIENT|Y$に、好感度$FAVOR|Y$と引き換えに、収入$MONTHS$ヶ月分の金銭（$CASH|Y$¤）を提供してもらいます。"
  WE_TRADE_FAVORS_FOR_MEN_TITLE:0 "人的資源を好感度と交換する"
- WE_TRADE_FAVORS_FOR_MEN_SETUP:0 "ある国に好感度をもって人的資源を求める時。"
+ WE_TRADE_FAVORS_FOR_MEN_SETUP:0 "我々がある国に好感度をもって人的資源の提供を求めたとき"
  WE_TRADE_FAVORS_FOR_MEN_HEADER:0 "$MESSENGER$"
  WE_TRADE_FAVORS_FOR_MEN_1:0 "好感度と兵の取引"
  WE_TRADE_FAVORS_FOR_MEN_2:0 "$MONARCHTITLE$、国家$RECIPIENT$に、"
@@ -580,7 +580,7 @@
  WE_TRADE_FAVORS_FOR_MEN_BTN2:0 "OK"
  WE_TRADE_FAVORS_FOR_MEN_BTN3:0 "移動"
  TRADE_FAVORS_FOR_MEN_TITLE:0 "人的資源を好感度と交換する"
- TRADE_FAVORS_FOR_MEN_SETUP:0 "ある国が自国に好感度を用いて兵を求めてきた時。"
+ TRADE_FAVORS_FOR_MEN_SETUP:0 "ある国が我々に好感度をもって兵を求めたとき"
  TRADE_FAVORS_FOR_MEN_HEADER:0 "使者"
  TRADE_FAVORS_FOR_MEN_1:0 "$ACTOR$"
  TRADE_FAVORS_FOR_MEN_2:0 "$MONARCHTITLE$、国家$ACTOR$は、"
@@ -592,7 +592,7 @@
  TRADE_FAVORS_FOR_MEN_BTN2:0 "OK"
  TRADE_FAVORS_FOR_MEN_BTN3:0 "移動"
  OTHER_TRADE_FAVORS_FOR_MEN_TITLE:0 "人的資源を好感度と交換する"
- OTHER_TRADE_FAVORS_FOR_MEN_SETUP:0 "ある国が好感度を用いて兵を求めてきた時。"
+ OTHER_TRADE_FAVORS_FOR_MEN_SETUP:0 "ある国が他の国に好感度をもって兵を求めたとき"
  OTHER_TRADE_FAVORS_FOR_MEN_HEADER:0 "使者"
  OTHER_TRADE_FAVORS_FOR_MEN_1:0 "$ACTOR$"
  OTHER_TRADE_FAVORS_FOR_MEN_2:0 "$MONARCHTITLE$、国家$ACTOR$は、"
@@ -604,7 +604,7 @@
  OTHER_TRADE_FAVORS_FOR_MEN_BTN2:0 "OK"
  OTHER_TRADE_FAVORS_FOR_MEN_BTN3:0 "移動"
  TRADE_FAVORS_FOR_MEN_DECLINED_TITLE:0 "行為を用いた兵の要求は拒否しました"
- TRADE_FAVORS_FOR_MEN_DECLINED_SETUP:0 "ある国が、他の国に好感度と引き換えに兵を与えることを拒否する時。"
+ TRADE_FAVORS_FOR_MEN_DECLINED_SETUP:0 "ある国が他国に好感度と引き換えにした兵の提供を拒否したとき"
  TRADE_FAVORS_FOR_MEN_DECLINED_HEADER:0 "好感度による兵の要求を拒否しました"
  TRADE_FAVORS_FOR_MEN_DECLINED_1:0 "$RECIPIENT$"
  TRADE_FAVORS_FOR_MEN_DECLINED_2:0 "は、好感度$FAVOR|Y$と引き換えに"
@@ -621,7 +621,7 @@
  TRADE_FAVORS_FOR_MEN_DESC2:0 "$MONTHS$カ月分の人的資源供給数（$MEN|Y$）と引き換えに$FAVOR|Y$の好感度を使います。"
  TRADE_FAVORS_FOR_MEN_DESC:0 "$RECIPIENT|Y$に好感度$FAVOR|Y$と引き換えに、供給量$MONTHS$ヶ月分（$MEN|Y$）の兵を求めます。"
  WE_TRADE_FAVORS_FOR_SAILORS_TITLE:0 "水兵を好感度と交換する"
- WE_TRADE_FAVORS_FOR_SAILORS_SETUP:0 "ある国に好感度をもって水兵の提供を求める時。"
+ WE_TRADE_FAVORS_FOR_SAILORS_SETUP:0 "我々がある国に好感度をもって水兵の提供を求めたとき"
  WE_TRADE_FAVORS_FOR_SAILORS_HEADER:0 "$MESSENGER$"
  WE_TRADE_FAVORS_FOR_SAILORS_1:0 "好感度と水兵の取引"
  WE_TRADE_FAVORS_FOR_SAILORS_2:0 "$MONARCHTITLE$、国家$RECIPIENT$へ"
@@ -632,7 +632,7 @@
  WE_TRADE_FAVORS_FOR_SAILORS_BTN2:0 "OK"
  WE_TRADE_FAVORS_FOR_SAILORS_BTN3:0 "移動"
  TRADE_FAVORS_FOR_SAILORS_TITLE:0 "水兵を好感度と交換する"
- TRADE_FAVORS_FOR_SAILORS_SETUP:0 "ある国が自国に水兵を求めてきた時。"
+ TRADE_FAVORS_FOR_SAILORS_SETUP:0 "ある国が我々に好感度をもって水兵を求めたとき"
  TRADE_FAVORS_FOR_SAILORS_HEADER:0 "使者"
  TRADE_FAVORS_FOR_SAILORS_1:0 "$ACTOR$"
  TRADE_FAVORS_FOR_SAILORS_2:0 "$MONARCHTITLE$、国家$ACTOR$は、"
@@ -644,7 +644,7 @@
  TRADE_FAVORS_FOR_SAILORS_BTN2:0 "OK"
  TRADE_FAVORS_FOR_SAILORS_BTN3:0 "移動"
  OTHER_TRADE_FAVORS_FOR_SAILORS_TITLE:0 "水兵を好感度と交換する"
- OTHER_TRADE_FAVORS_FOR_SAILORS_SETUP:0 "ある国が、他の国に好感度をもって水兵を求めた時。"
+ OTHER_TRADE_FAVORS_FOR_SAILORS_SETUP:0 "ある国が他の国に好感度をもって水兵を求めたとき"
  OTHER_TRADE_FAVORS_FOR_SAILORS_HEADER:0 "使者"
  OTHER_TRADE_FAVORS_FOR_SAILORS_1:0 "$ACTOR$"
  OTHER_TRADE_FAVORS_FOR_SAILORS_2:0 "$MONARCHTITLE$、国家$ACTOR$は、"
@@ -656,7 +656,7 @@
  OTHER_TRADE_FAVORS_FOR_SAILORS_BTN2:0 "OK"
  OTHER_TRADE_FAVORS_FOR_SAILORS_BTN3:0 "移動"
  TRADE_FAVORS_FOR_SAILORS_DECLINED_TITLE:0 "好感度をもって水兵の要求は拒否しました。"
- TRADE_FAVORS_FOR_SAILORS_DECLINED_SETUP:0 "ある国が他の国に好感度と取り引きに水兵の提供について拒否した時。"
+ TRADE_FAVORS_FOR_SAILORS_DECLINED_SETUP:0 "ある国が他国に好感度にした水兵の提供を拒否したとき"
  TRADE_FAVORS_FOR_SAILORS_DECLINED_HEADER:0 "好感度による水兵の要求が拒否された"
  TRADE_FAVORS_FOR_SAILORS_DECLINED_1:0 "$RECIPIENT$"
  TRADE_FAVORS_FOR_SAILORS_DECLINED_2:0 "は、好感度$FAVOR|Y$と引き換えに"
@@ -676,7 +676,7 @@
  mechanic_free_concentrate_development_yes:0 "損失ゼロで開発度の集中が可能となる"
  mechanic_free_concentrate_development_no:0 "開発の集中を行うと、開発度の損失が発生する。"
  WE_TRADE_FAVORS_FOR_HEIR_TITLE:0 "親戚の後継者指名を要請する"
- WE_TRADE_FAVORS_FOR_HEIR_SETUP:0 "ある国に好感度を用いて自国の王朝に連なる者をその国の後継者に据えることを求める時。"
+ WE_TRADE_FAVORS_FOR_HEIR_SETUP:0 "我々がある国に好感度をもって、自国の王朝に連なる者をその国の後継者に据えるよう求めたとき"
  WE_TRADE_FAVORS_FOR_HEIR_HEADER:0 "$MESSENGER$"
  WE_TRADE_FAVORS_FOR_HEIR_1:0 "親類縁者を後継者とする要求"
  WE_TRADE_FAVORS_FOR_HEIR_2:0 "$MONARCHTITLE$、国家$RECIPIENT$に、"
@@ -687,7 +687,7 @@
  WE_TRADE_FAVORS_FOR_HEIR_BTN2:0 "OK"
  WE_TRADE_FAVORS_FOR_HEIR_BTN3:0 "移動"
  TRADE_FAVORS_FOR_HEIR_TITLE:0 "親戚の後継者指名を要請する"
- TRADE_FAVORS_FOR_HEIR_SETUP:0 "ある国から、好感度をもって、その国の王朝に連なる者を自国の後継者に据えるよう求められた時。"
+ TRADE_FAVORS_FOR_HEIR_SETUP:0 "ある国が我々に好感度をもって、その国の王朝に連なる者を自国の後継者に据えるよう求めたとき"
  TRADE_FAVORS_FOR_HEIR_HEADER:0 "使者"
  TRADE_FAVORS_FOR_HEIR_1:0 "$ACTOR$"
  TRADE_FAVORS_FOR_HEIR_2:0 "$MONARCHTITLE$、$ACTOR$は"
@@ -699,7 +699,7 @@
  TRADE_FAVORS_FOR_HEIR_BTN2:0 "OK"
  TRADE_FAVORS_FOR_HEIR_BTN3:0 "移動"
  OTHER_TRADE_FAVORS_FOR_HEIR_TITLE:0 "親戚の後継者指名を要請する"
- OTHER_TRADE_FAVORS_FOR_HEIR_SETUP:0 "ある国が他の国に、好感度をもって自身の王朝に連なる者を後継者に据えるよう求める場合。"
+ OTHER_TRADE_FAVORS_FOR_HEIR_SETUP:0 "ある国が他国に好感度をもって、自身の王朝に連なる者を後継者に据えるよう求めたとき"
  OTHER_TRADE_FAVORS_FOR_HEIR_HEADER:0 "使者"
  OTHER_TRADE_FAVORS_FOR_HEIR_1:0 "$ACTOR$"
  OTHER_TRADE_FAVORS_FOR_HEIR_2:0 "$MONARCHTITLE$、$ACTOR$は"
@@ -711,7 +711,7 @@
  OTHER_TRADE_FAVORS_FOR_HEIR_BTN2:0 "OK"
  OTHER_TRADE_FAVORS_FOR_HEIR_BTN3:0 "移動"
  TRADE_FAVORS_FOR_HEIR_DECLINED_TITLE:0 "好感度をもって、自国の王朝に連なる者を後継者に据えるに要求は拒否されました"
- TRADE_FAVORS_FOR_HEIR_DECLINED_SETUP:0 "他の国から好感度と引き換えに、その国の王朝に連なる者を後継者にすることを、ある国が拒否した場合。"
+ TRADE_FAVORS_FOR_HEIR_DECLINED_SETUP:0 "ある国が他国に好感度と引き換えに、その国の王朝に連なる者を後継者にすることを拒否したとき"
  TRADE_FAVORS_FOR_HEIR_DECLINED_HEADER:0 "好感度による後継者の要求は拒否されました"
  TRADE_FAVORS_FOR_HEIR_DECLINED_1:0 "$RECIPIENT$"
  TRADE_FAVORS_FOR_HEIR_DECLINED_2:0 "は、好感度$FAVOR|Y$と引き換えに、$ACTOR$の王朝に連なる者を"
@@ -732,7 +732,7 @@
  X_IS_SUBJECT_OF_Y:0 "$COUNTRY|Y$は$OVERLORD|Y$の従属国である。"
  DIPLOMACYACTION_CATEGORY_favors:0 "好感度"
  WE_TRADE_FAVORS_FOR_TRUST_TITLE:0 "信頼を好感度と交換する"
- WE_TRADE_FAVORS_FOR_TRUST_SETUP:0 "ある国に好感度をもって、信頼度の上昇を求める時。"
+ WE_TRADE_FAVORS_FOR_TRUST_SETUP:0 "我々がある国に好感度をもって信頼度の上昇を求めたとき"
  WE_TRADE_FAVORS_FOR_TRUST_HEADER:0 "$MESSENGER$"
  WE_TRADE_FAVORS_FOR_TRUST_1:0 "好感度と信頼度の取引"
  WE_TRADE_FAVORS_FOR_TRUST_2:0 "$MONARCHTITLE$、国家$RECIPIENT$は、"
@@ -743,7 +743,7 @@
  WE_TRADE_FAVORS_FOR_TRUST_BTN2:0 "OK"
  WE_TRADE_FAVORS_FOR_TRUST_BTN3:0 "移動"
  TRADE_FAVORS_FOR_TRUST_TITLE:0 "信頼を好感度と交換する"
- TRADE_FAVORS_FOR_TRUST_SETUP:0 "ある国が自国に好感度と引き換えに信頼度を求める時。"
+ TRADE_FAVORS_FOR_TRUST_SETUP:0 "ある国が我々に好感度と引き換えにした信頼度を求めたとき"
  TRADE_FAVORS_FOR_TRUST_HEADER:0 "使者"
  TRADE_FAVORS_FOR_TRUST_1:0 "$ACTOR$"
  TRADE_FAVORS_FOR_TRUST_2:0 "$MONARCHTITLE$、$ACTOR$は自国に"
@@ -755,7 +755,7 @@
  TRADE_FAVORS_FOR_TRUST_BTN2:0 "OK"
  TRADE_FAVORS_FOR_TRUST_BTN3:0 "移動"
  OTHER_TRADE_FAVORS_FOR_TRUST_TITLE:0 "信頼を好感度と交換する"
- OTHER_TRADE_FAVORS_FOR_TRUST_SETUP:0 "ある国が他の国に好感度をもって信頼度を求める時。"
+ OTHER_TRADE_FAVORS_FOR_TRUST_SETUP:0 "ある国が他国に好感度をもって信頼度を求めたとき"
  OTHER_TRADE_FAVORS_FOR_TRUST_HEADER:0 "使者"
  OTHER_TRADE_FAVORS_FOR_TRUST_1:0 "$ACTOR$"
  OTHER_TRADE_FAVORS_FOR_TRUST_2:0 "$MONARCHTITLE$、国家$ACTOR$は$RECIPIENT$に"
@@ -767,7 +767,7 @@
  OTHER_TRADE_FAVORS_FOR_TRUST_BTN2:0 "OK"
  OTHER_TRADE_FAVORS_FOR_TRUST_BTN3:0 "移動"
  TRADE_FAVORS_FOR_TRUST_DECLINED_TITLE:0 "好感度を信頼へ引き換える要求は拒否されました"
- TRADE_FAVORS_FOR_TRUST_DECLINED_SETUP:0 "ある国が信頼と引き換えに好感度を高めることを辞退するとき。"
+ TRADE_FAVORS_FOR_TRUST_DECLINED_SETUP:0 "ある国が信頼と引き換えに好感度を高めることを辞退するとき"
  TRADE_FAVORS_FOR_TRUST_DECLINED_HEADER:0 "好感度を信頼へ引き換える要求が拒否された"
  TRADE_FAVORS_FOR_TRUST_DECLINED_1:0 "$RECIPIENT$"
  TRADE_FAVORS_FOR_TRUST_DECLINED_2:0 "は、好感度$FAVOR|Y$と引き換えに"
@@ -795,7 +795,7 @@
  WE_TRADE_FAVORS_FOR_WAR_PREP_BTN2:0 "OK"
  WE_TRADE_FAVORS_FOR_WAR_PREP_BTN3:0 "移動"
  TRADE_FAVORS_FOR_WAR_PREP_TITLE:0 "戦争の準備を求める"
- TRADE_FAVORS_FOR_WAR_PREP_SETUP:0 "他国が我々に好感度によって戦争の準備を求めたとき"
+ TRADE_FAVORS_FOR_WAR_PREP_SETUP:0 "他国が我々に好感度をもって戦争の準備を求めたとき"
  TRADE_FAVORS_FOR_WAR_PREP_HEADER:0 "使者"
  TRADE_FAVORS_FOR_WAR_PREP_1:0 "$ACTOR$"
  TRADE_FAVORS_FOR_WAR_PREP_2:0 "$MONARCHTITLE$、$ACTOR$は"
@@ -807,7 +807,7 @@
  TRADE_FAVORS_FOR_WAR_PREP_BTN2:0 "OK"
  TRADE_FAVORS_FOR_WAR_PREP_BTN3:0 "移動"
  OTHER_TRADE_FAVORS_FOR_WAR_PREP_TITLE:0 "戦争の準備を求める"
- OTHER_TRADE_FAVORS_FOR_WAR_PREP_SETUP:0 "ある国が他の国に好感度をもって戦争準備するよう求める時。"
+ OTHER_TRADE_FAVORS_FOR_WAR_PREP_SETUP:0 "ある国が他国に好感度をもって戦争準備するよう求めたとき"
  OTHER_TRADE_FAVORS_FOR_WAR_PREP_HEADER:0 "使者"
  OTHER_TRADE_FAVORS_FOR_WAR_PREP_1:0 "$ACTOR$"
  OTHER_TRADE_FAVORS_FOR_WAR_PREP_2:0 "$MONARCHTITLE$、国家$ACTOR$は$RECIPIENT$に"
@@ -819,7 +819,7 @@
  OTHER_TRADE_FAVORS_FOR_WAR_PREP_BTN2:0 "OK"
  OTHER_TRADE_FAVORS_FOR_WAR_PREP_BTN3:0 "移動"
  TRADE_FAVORS_FOR_WAR_PREP_DECLINED_TITLE:0 "戦争準備の要求は拒否されました"
- TRADE_FAVORS_FOR_WAR_PREP_DECLINED_SETUP:0 "ある国が好感度を用いた戦争準備要求を拒否した時。"
+ TRADE_FAVORS_FOR_WAR_PREP_DECLINED_SETUP:0 "ある国が好感度と引き換えにした戦争準備要求を拒否したとき"
  TRADE_FAVORS_FOR_WAR_PREP_DECLINED_HEADER:0 "戦争準備要求は拒否されました"
  TRADE_FAVORS_FOR_WAR_PREP_DECLINED_1:0 "$RECIPIENT$"
  TRADE_FAVORS_FOR_WAR_PREP_DECLINED_2:0 "は、好感度$FAVOR|Y$と引き換えに"
@@ -862,7 +862,7 @@
  NO_FEDERATION_TEXT:0 "連邦の一員ではありません。"
  NO_CURR_ESTATES_TT:0 "現在階級が存在しない。"
  FEDERATION_ADVANCEMENT_TITLE:0 "新たな連邦の進歩"
- FEDERATION_ADVANCEMENT_SETUP:0 "所属中の連邦が新しい進歩を獲得した時。"
+ FEDERATION_ADVANCEMENT_SETUP:0 "所属中の連邦が新しい進歩を獲得したとき"
  FEDERATION_ADVANCEMENT_HEADER:0 "新たな連邦の進歩"
  FEDERATION_ADVANCEMENT_1:0 "$WHO|Y$"
  FEDERATION_ADVANCEMENT_2:0 "は、$FEDERATION|Y$に進歩"
@@ -923,7 +923,7 @@
  TRADE_FAVORS_FOR_GOLD_DIPLO_ACTION:0 "ダカットを好感度と交換する"
  TRADE_FAVORS_FOR_MEN_DIPLO_ACTION:0 "人的資源を好感度と交換する"
  TRADE_FAVORS_FOR_SAILORS_DIPLO_ACTION:0 "水兵を好感度と交換する"
- TRADE_FAVORS_FOR_HEIR_DIPLO_ACTION:0 "親戚の後継者指名を要請"
+ TRADE_FAVORS_FOR_HEIR_DIPLO_ACTION:0 "親戚の後継者指名を要請する"
  TRADE_FAVORS_FOR_TRUST_DIPLO_ACTION:0 "信頼を好感度と交換する"
  TRADE_FAVORS_FOR_WAR_PREP_DIPLO_ACTION:0 "戦争の準備を求める"
  MERCENARY_MANPOWER_TOOLTIP:0 "人的資源補充速度：$AMOUNT|Y$/月"
@@ -1001,7 +1001,7 @@
  CANNOT_AFFORD_GURU_COST:0 "この教義に必要な$POW|Y$$TYPE$がありません。"
  CANNOT_PICK_TEACHING_NEW_GURU:0 "一人のグルから複数の教義を選択することはできません。"
  GURU_APPOINTED:0 "$GURU|Y$をグルにします。"
- NEW_GURU_SETUP:0 "新しいグルを任命した時。"
+ NEW_GURU_SETUP:0 "新しいグルを任命したとき"
  NEW_GURU_HEADER:0 "$MESSENGER$"
  NEW_GURU_1:0 "新しいグル"
  NEW_GURU_2:0 "$GURU|Y$が新しいグルに任命されました。"
@@ -1011,7 +1011,7 @@
  NEW_GURU_BTN1:0 "OK"
  NEW_GURU_BTN2:0 "OK"
  NEW_GURU_BTN3:0 "OK"
- NO_GURU_SETUP:0 "グルがいない時。"
+ NO_GURU_SETUP:0 "グルがいなくなったとき"
  NO_GURU_HEADER:0 "$MESSENGER$"
  NO_GURU_1:0 "グルがいない"
  NO_GURU_2:0 "自国の宗教にグルがいません。"
