--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -363,7 +363,7 @@
  annex_country_japan:0 "国家の併合"
  annex_country_japan_desc:0 "戦争目標は首都占領です。そうすれば例え他のルールで許可されていなかったとしても対象国を併合することができるようになります。"
  kor_conquer_changbai_title:0 "白頭山への交通路"
- kor_conquer_changbai_desc:1 "何世代にもわたり、朝鮮の人々は遠い昔に大規模な噴火により形成された天池と呼ばれる大きな噴火口湖を持つ活火山である白頭山を神聖なものだと考えてきた。我々は、朝鮮人がそれにアクセスすることが、満州人の慈悲その他に依存しないことを確認する必要がある。"
+ kor_conquer_changbai_desc:1 "何世代にもわたり、朝鮮の人々は白頭山（遠い昔に大規模な噴火により形成された天池と呼ばれる大きな噴火口湖を持つ活火山）を神聖なものだと考えてきた。我々は、朝鮮人が山にアクセスすることが、満州族の慈悲に左右されないようにしなければならない。"
  kor_seize_southern_manchuria_title:0 "国境の占拠"
  kor_seize_southern_manchuria_desc:0 "満州との国境を朝鮮半島の領域を超えて押し戻すことで、朝鮮の国力と安全保障を大きく上げることができる。"
  kor_end_manchuria_title:0 "満州の終焉"
