--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -597,7 +597,7 @@
  military_vassalization:0 "軍事拡張主義"
  desc_military_vassalization:0 "象徴的に重要な地域の征服は、我々の人々を鼓舞している。我が国の募集者は、我々の国民の間で、軍に加わることに対する関心が高まっていることを報告している。"
  uniter_of_the_manchus:0 "満州の統一"
- desc_uniter_of_the_manchus:0 "女真族を統一した今、我々の支配者はすべての満州人の支持を得ている。我々の違いを脇に置き、敵を襲撃する時が来た。"
+ desc_uniter_of_the_manchus:0 "女真族を統一した今、我々の支配者は全満州族の支持を得ている。我々の違いを脇に置き、敵を襲撃する時が来た。"
  english_out_of_france:0 "イングランドに対する勝利"
  desc_english_out_of_france:0 "フランスにおけるイングランドの最後の占領地の喪失により、偉大な勝利を収めたことで、国家はようやく回復を始めることができる。"
  baltic_ambition:0 "バルト海への野望"
