--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -685,7 +685,7 @@
  flavor_eng.EVTDESC9113:0 "ヘンリー8世の姉メアリーの孫娘であるジェーン・グレイ夫人は、イギリスの王位を主張した。1553年、彼女の意に反してノーサンバランド公爵の息子であるギルフォード・ダドリーと結婚させられ、王の死後も断固として権力を保とうとしたエドワード6世の摂政ノーサンバランド公に駒として使われた。エドワード6世は致命的な病気に冒されており、死の床にいる際、ヘンリー8世の娘で次期女王メアリー1世やエリザベス1世を差し置いて、ジェーンが王位に就くことに賛成するノーサンバランド公の「策略」に署名させられた。エドワードの死から4日後の1553年7月10日、ジェーンは女王と宣言された。彼女の治世は7月19日までしか続かなかった。国民はカトリック教徒のメアリーの請求を支持し、ノーサンバランド公軍はメアリーに忠誠を誓う軍に打ち負かされた。"
  flavor_eng.EVTOPTA9113:0 "彼女の主張は認められない！"
  flavor_eng.EVTNAME9114:0 "イングランドの血まみれメアリーとフェリペ"
- flavor_eng.EVTDESC9114:0 "1554年、カトリック教徒の女王メアリーはスペインのフェリペと結婚し、その結婚はイングランドとスペインの両方に大きな可能性を開いた。フェリペは議会でイングランド王の称号を与えられたが、国の統治は許されなかった。だが、差し迫った重要な問題は宗教に関することだった。国王至上法は君主に支配権を与えていたが、イングランド国民は宗教に関して分裂していた。カトリック教徒はローマ教皇の権威を要求し、プロテスタントは開放的な聖職者法を求めた。メアリーは狂信的なカトリック教徒と運命を共にすることを選び、恐怖の波がやってきた。こうして、彼女は‘Bloody Mary’（血まみれメアリー）の異名を得るのだった。"
+ flavor_eng.EVTDESC9114:0 "1554年、カトリック教徒の女王メアリーはスペインのフェリペと結婚し、その結婚はイングランドとスペインの両方に大きな可能性を開いた。フェリペは議会でイングランド王の称号を与えられたが、国の統治は許されなかった。だが、差し迫った重要な問題は宗教に関することだった。国王至上法は君主に支配権を与えていたが、イングランド国民は宗教に関して分裂していた。カトリック教徒はローマ教皇の権威を要求し、プロテスタントは開放的な聖職者法を求めた。メアリーは狂信的なカトリック教徒と運命を共にすることを選び、恐怖の波がやってきた。こうして、彼女は\"Bloody Mary（血まみれメアリー）\"の異名を得るのだった。"
  flavor_eng.EVTOPTA9114:0 "イングランド国教会の下にローマ教皇の権威を回復する"
  flavor_eng.EVTOPTB9114:0 "すべての者の信教の自由を承認する"
  flavor_eng.EVTNAME9115:0 "モスクワ交易会社"
@@ -2790,7 +2790,7 @@
  flavor_hol.EVTOPTA3:0 "国訳聖書を確立する。"
  flavor_hol.EVTOPTB3:0 "無視しろ"
  flavor_hol.EVTNAME4:0 "シモン・ステヴィン"
- flavor_hol.EVTDESC4:0 "フランドルの数学者であり軍事技術者でもあるシモン・ステヴィンは、科学と工学の多くの分野において、理論と実践の双方で活躍していた。オランダ語で数学を意味する'wiskunde'または「厳密学」は、ステヴィン自身の翻訳であり、オランダ語をラテン語を介してギリシャ語から「数学」（mathematics）が派生していないヨーロッパの数少ない言語の一つにしている。彼は風の力だけによって推進される帆を備えた乗り物を発明し、馬の速度を上回った。ステヴィンによって執筆され、1585年に出版された'De Thiende'は『十進法』として英語に翻訳されている。本では「一般的な算術の四つの原則、すなわち、加法、減法、乗法、および除法によって、分数ではない整数によるすべての計算をどのように行うか」を教えている。"
+ flavor_hol.EVTDESC4:0 "フランドルの数学者であり軍事技術者でもあるシモン・ステヴィンは、科学と工学の多くの分野において、理論と実践の双方で活躍していた。オランダ語で数学を意味する\"wiskunde\"または「厳密学」は、ステヴィン自身の翻訳であり、オランダ語をラテン語を介してギリシャ語から「数学」（mathematics）が派生していないヨーロッパの数少ない言語の一つにしている。彼は風の力だけによって推進される帆を備えた乗り物を発明し、馬の速度を上回った。ステヴィンによって執筆され、1585年に出版された\"De Thiende\"は『十進法』として英語に翻訳されている。本では「一般的な算術の四つの原則、すなわち、加法、減法、乗法、および除法によって、分数ではない整数によるすべての計算をどのように行うか」を教えている。"
  flavor_hol.EVTOPTA4:0 "彼を採用する。"
  flavor_hol.EVTOPTB4:0 "彼を無視する。"
  flavor_hol.EVTNAME5:0 "ヴィルヘルムス"
