--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -72,7 +72,7 @@
  CONFIRMAKECORECOST:0 "それには§Y$COST$§W $TYPE$力のコストがかかります。"
  CONFIRMCANCELMAKECORE:0 "中核州を放棄！"
  CONFIRMCANCELMAKECOREDESC:0 "§Y$PROV$§Wを中核州にするのを中止しますか？"
- MAKECORECOST_INFO:0 "§Y$PROVINCE$§Wを中核州にするには、§Y$COST$§W $TYPE$力がコストがかかります。"
+ MAKECORECOST_INFO:0 "§Y$PROVINCE$§Wを中核州にするには、§Y$COST$§W $TYPE$力のコストがかかります。"
  CONFIRMFABRICATECLAIM:0 "請求権の捏造"
  CONFIRMFABRICATECLAIMDESC:0 "$PROV|Y$の請求権を捏造しますか？"
  CONFIRMCHANGECULTURE:0 "文化を転向！"
@@ -2511,7 +2511,7 @@
  found_turun_akatemia:0 "オーボ・アカデミーの創建"
  found_turun_akatemia_desc:0 "1640年、スウェーデンの女王クリスティーナへのペル・ブラーエ伯爵の提案によりオーボ・アカデミーが設立された。今日では、フィンランドの最初の大学であり、最も古い大学である。"
  hakkapelitta_fin:0 "ハッカペリター"
- hakkapelitta_fin_desc:0 "ハッカペリターは、グスタフ・アドルフが三十年戦争で雇用した恐るべきフィンランド騎兵であった。ハッカペリターという名は神聖ローマ帝国の兵士たちが彼らに付けた名であり、戦場での叫び声である'Hakkaa päälle!'あるいは'Hack on them!'/'Cut them down!'をフィンランド語に修正したものである。ハッカペリターは敵に衝撃を与え、屈服させた、突然で残忍な攻撃によって恐れられた。"
+ hakkapelitta_fin_desc:0 "ハッカペリターは、グスタフ・アドルフが三十年戦争で雇用した恐るべきフィンランド騎兵であった。ハッカペリターという名は神聖ローマ帝国の兵士たちが彼らに付けた名をフィンランド語に直したものであり、戦場での叫び声である\"Hakkaa päälle!\"つまり「叩き殺せ！」「打ち壊せ！」に由来している。ハッカペリターは敵に衝撃を与え、屈服させた、突然で残忍な攻撃によって恐れられた。"
  the_white_death:0 "白い死神"
  the_white_death_desc:0 "あなたがフィンランドを征服したいと望むなら、フィンランドの冬の致命的な、冷たい抱擁を感じたいとでも願っていない限り、春の侵攻を準備することだ。"
  anjala_conspiracy:0 "アニアーラ事件"
@@ -2759,7 +2759,7 @@
  NAX_ideas_bonus:0 "ナクソスの宿願"
  maritime_state:0 "海上国家"
  maritime_state_desc:0 "海から、我々のイタリアの祖先たちは、この土地と海を支配するようになり、我々の権力は今日でも海からやって来る。ナクソス公国は、キクラデス諸島のほとんどに広がり、常に海とその不屈の波を見てきた国家であった。我々が強く団結し続けていれば、海は我々の未来がある場所だ。"
- naxos_rules_the_waves:0 "ナクソスが大海を支配する"
+ naxos_rules_the_waves:0 "ナクソスよ大海原を支配せよ"
  naxos_rules_the_waves_desc:0 "多くの人にとって、強力な海軍は威信の問題である。我々にとっては、強力な海軍は我々の生存に不可欠な問題である。領域が何十もの島々に広がっているために、我々の領土の部分の間の交流を維持する唯一の方法は、海を経由することである。"
  archipelago_of_opportunities:0 "機会の群島"
  archipelago_of_opportunities_desc:0 "我々の島々の周りの海は、船員や船、特に豊富な品物を運ぶ船にとっては常に危険な状態にある。これらの水域で一生を過ごした経験豊富な男たちが乗り込んだガレー船による軽快で素早い攻撃により、彼らの犠牲者が何が起こったのかを理解する間もなく消えていくだろう。"
@@ -4111,7 +4111,7 @@
  MED_ideas_start:0 "ミドゥリ・バリの伝統"
  MED_ideas_bonus:0 "ミドゥリ・バリの宿願"
  med_kings_of_the_sea:0 "海の王"
- med_kings_of_the_sea_desc:0 "我々の国の支配者は'Bahr Negasi'あるいは「海の王」として知られており、紅海との接触、そしてその交易と人々の流れは、常に我々の歴史における、はっきりとした特徴であった。"
+ med_kings_of_the_sea_desc:0 "我々の国の支配者は\"Bahr Negasi\"即ち「海の王」として知られており、紅海との接触、そしてその交易と人々の流れは、常に我々の歴史における、はっきりとした特徴であった。"
  med_ancient_christian_traditions:0 "キリスト教の遺産"
  med_ancient_christian_traditions_desc:0 "西暦328年にアクスムの最初の司教はアレクサンドリアの教皇によって任命された。その日以来多くのことが起こってきたが、我々はまだキリスト教の信仰を保持しており、宗教的指導をアレクサンドリアとエチオピアに求めている。我々の祖先のキリスト教の伝統を守り、修道会を我々の社会に統合しよう。"
  med_diplomatic_flexibility:0 "外交的な柔軟性"
