--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -717,7 +717,7 @@
  icons_images_aspect:0 "聖像"
  desc_icons_images_aspect:0 "イエス、マリア、聖人、天使を描写した絵は、石で刻まれ、布に刺繍され、木に塗られたり、さまざまな方法で作られて、多くの場合飾られている。これらの聖像については議論され反対されてきたが、人気のある聖像のために彼らの存在が保証され、教会はついに聖像の崇拝を許可することを甘受した。"
  legalised_divorces_aspect:0 "合法的な離婚"
- desc_legalised_divorces_aspect:0 "結婚の婚姻が世俗の契約と見なされるようになったことで、教会権威は婚姻の取り消しを認めるようになりました。世俗権威は\"divortium A vinculo matrimonii\"即ち「結婚による全ての結びつきの分離」の布告ができるようになり、それゆえ、婚姻の解消をするようになりました。"
+ desc_legalised_divorces_aspect:0 "婚姻が世俗的契約とみなされるようになるまでは、教会権威が婚姻の無効を決定していた。世俗権威は\"divortium a vinculo matrimonii\"即ち「結婚による全ての結びつきからの分離」の布告ができ、それによって婚姻を解消した。"
  heretics_deported_aspect:0 "異端者の追放"
  desc_heretics_deported_aspect:0 "異端者たちが、異端であると信じられている信念や意見により、我々の教会に反対する人々への処刑は、この罪の有罪判決を受けた人の追放に置き換えられている。"
  parish_registers_aspect:0 "教区の登録"
