--- a/source/localisation/nw_l_english.yml
+++ b/source/localisation/nw_l_english.yml
@@ -4,13 +4,13 @@
  LIBERTY_DESIRE_CURRENT_DESC:0 "独立要求は植民地がどれほど独立を望んでいるのかを表します。中でも関税を上げると徐々に増加します。"
  LIBERTY_DESIRE_CURRENT_LIMITS:0 "独立要求はその国がどれほど独立を望んでいるのかを表します。独立要求が§Y$VAL$%§!を超えると、反抗的になります。"
  INCREASE_TARIFFS:0 "関税引き上げ"
- INCREASE_TARIFFS_DESC:1 "$POINTS|R$ $TYPE$を支払うことによって関税を$TARIFFS|%0G$上げます（現在月$WORTH|Y$¤）これは$COUNTRY|Y$の独立要求を§R$LIBERTY|0$%§!増加させます。"
+ INCREASE_TARIFFS_DESC:1 "$POINTS|R$ $TYPE$ 支払うことによって関税を$TARIFFS|%0G$上げます（現在月$WORTH|Y$¤） これは$COUNTRY|Y$の独立要求を§R$LIBERTY|0$%§!増加させます。"
  INCREASE_TARRIF_MAX:0 "関税はすでに最大値になっています。"
- INCREASE_TARIFFS_NO_POWER:0 "関税引き上げには§Y$VAL$§!$TYPE$必要です。"
+ INCREASE_TARIFFS_NO_POWER:0 "関税引き上げには§Y$VAL$§!$TYPE$ 必要です。"
  DECREASE_TARIFFS:0 "関税引き下げ"
- DECREASE_TARIFFS_DESC:1 "$POINTS|R$ $TYPE$ を支払うことによって関税を$TARIFFS|%0R$下げます（現在月$WORTH|Y$¤） これは$COUNTRY|Y$の独立要求を§G$LIBERTY|0$%§!減少させます。"
+ DECREASE_TARIFFS_DESC:1 "$POINTS|R$ $TYPE$ 支払うことによって関税を$TARIFFS|%0R$下げます（現在月$WORTH|Y$¤） これは$COUNTRY|Y$の独立要求を§G$LIBERTY|0$%§!減少させます。"
  DECREASE_TARRIF_MAX:0 "関税はすでに最小値になっています。"
- DECREASE_TARIFFS_NO_POWER:0 "関税引き下げには§Y$VAL$§!$TYPE$必要です。"
+ DECREASE_TARIFFS_NO_POWER:0 "関税引き下げには§Y$VAL$§!$TYPE$ 必要です。"
  SUBJECT_INHERITANCE_CHANCE:0 "君主の死の際に相続する確率：$VAL|+%$"
  SUBJECT_BREAK_CHANCE:0 "君主の死の際に同君連合が解消される確率：$VAL|-%$"
  COLONIAL_OVERLORD:0 "$LIST$の植民地"
