--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -5899,13 +5899,13 @@
  hsc_the_wallace:0 "叙事詩『ウォレス』"
  hsc_the_wallace_desc:0 "我々は高名で真に名高き者を読み知る、\nこの地域を支配するふさわしき血の者を、\nそしてこれからは我が伝えよう、\n君がその物語が語られるのを聞くため、ウィリアム・ウォレスの物語を。"
  hsc_highland_clans:0 "ハイランドの氏族"
- hsc_highland_clans_desc:0 "スコットランド高地地方の氏族たちは争いが好きな民族である。彼らが互いに憤慨していると同じ程、彼らの祖先の土地を支配する可能性のある外国人の侵略者に対しさらに憤慨する。もちろん、外国の侵略の脅威が終わった際は、氏族は内戦を再開する。たった1つの氏族しか存在できない。"
+ hsc_highland_clans_desc:0 "ハイランドの氏族たちは争いを好む。彼らは互いを忌み嫌う以上に、父祖伝来の土地をおびやかす外国人の侵略者を憎む。もちろん、脅威が去れば彼ら再び戦いはじめる。ハイランドにはたった1つの氏族しか存在できない。"
  hsc_storm_the_castle:0 "城への襲撃"
- hsc_storm_the_castle_desc:0 "スコットランド高地地方では、例えどのような問題が起ころうとも、どこかの時点で城を急襲しないではまず解決できない。こうした事態での我々の経験は何世代も前から行われてきたことであり、非常に応用の効く技能である。"
+ hsc_storm_the_castle_desc:0 "ハイランドではいかなる問題であっても、どこかの時点で城を急襲しなければまず解決できない。このような事態での我々の経験は何世代も前から行われてきたことであり、非常に応用の利く技能である。"
  hsc_episcopalianism:0 "聖公会の教義"
- hsc_episcopalianism_desc:0 "スコットランド高地地方において教会をどのように建設すべきか、また、宗教改革の到来の後、どのような教義を採用すべきかについて多くの競合する考えがある。教会の手続きのためのはっきりとした構造と、聖職者のためのある程度教義上の独立の双方を許す、階層的な主教区のモデルを保持する事を我々は選択した。"
+ hsc_episcopalianism_desc:0 "ハイランドにおいて教会をどのように建設すべきか、また、宗教改革の到来の後、どのような教義を採用すべきかについて多くの競合する考えがある。教会の手続きのためのはっきりとした構造と、聖職者のためのある程度教義上の独立の双方を許す、階層的な主教区の形式を保持することを我々は選択した。"
  hsc_highland_charge:0 "ハイランド兵の突撃"
- hsc_highland_charge_desc:0 "火器類が戦場に革命をもたらしており、スコットランド高地地方の戦士はそれに適応せねばならない。攻撃的な新しい急襲戦術が我が軍の将軍によって編み出された。我々の兵士は、できれば下り坂で、最初の敵の一斉射撃のなか正面から突撃し、進むにつれて我が軍も発砲する。発砲後、より伝統的な武器を取り出して乱戦に入る。しかしながら、この戦術に要求される速度のせいで、我々の戦士は衣類をほとんど着用しないことを余儀なくされる。"
+ hsc_highland_charge_desc:0 "火器類が戦場に革命をもたらしており、ハイランドの戦士はそれに適応せねばならない。攻撃的な新しい急襲戦術が我が軍の将軍によって編み出された。我々の兵士は、できれば下り坂で、最初の敵の一斉射撃のなか正面から突撃し、進むにつれて我が軍も発砲する。発砲後、より伝統的な武器を取り出して乱戦に入る。しかしながら、この戦術に要求される速度のせいで、我々の戦士は衣類をほとんど着用しないことを余儀なくされる。"
  hsc_arming_act:0 "武装条例"
  hsc_arming_act_desc:0 "我が国の圧政者たちは、我々が抵抗する能力を奪うために武器を没収したものだった。武装条例は、全てのハイランダーたちに銃器を所有し、訓練する事を義務づけている。"
  hsc_ossian:0 "オシアン"
@@ -5930,8 +5930,8 @@
  ULS_ideas:0 "アルスターのアイデア"
  ULS_ideas_start:0 "アルスターの伝統"
  ULS_ideas_bonus:0 "アルスターの野望"
- uls_clan_connections:0 "スコットランド高地との関係"
- uls_clan_connections_desc:0 "アルスターの貴族は、スコットランド高地のドナルド一族と結婚や先祖の結びつきを持つ。ドナルド氏族はアルスターへ専門的な技術を貸与してくれる為、常に頼る事ができる。"
+ uls_clan_connections:0 "ハイランドとの関係"
+ uls_clan_connections_desc:0 "アルスターの貴族は、ハイランドのドナルド一族と結婚や先祖の結びつきを持つ。ドナルド氏族はアルスターへ専門的な技術を貸与してくれるため、常に頼ることができる。"
  uls_peerage:0 "アルスターの爵位"
  uls_peerage_desc:0 "ほぼ全てのアルスター領主は、少なくとも名目上はアイルランドの爵位制度の一部であり、それによって、アイルランドの地主はイングランド王位への忠誠を誓っている。実際にはこれはほぼ意味をなしていないが、我々は誇らしげに称号を身に着ける。"
  civilist_of_irishry:0 "アイルランドの民間人"
