--- a/source/localisation/prov_names_adj_l_english.yml
+++ b/source/localisation/prov_names_adj_l_english.yml
@@ -250,7 +250,7 @@
  PROV_ADJ250:1 "パース"
  PROV_ADJ251:0 "アバディーン"
  PROV_ADJ252:0 "ハイランド"
- PROV_ADJ253:1 "スコットランド高地"
+ PROV_ADJ253:1 "外ヘブリディーズ"
  PROV_ADJ254:0 "ポズナニ"
  PROV_ADJ255:0 "カリシュ"
  PROV_ADJ256:0 "プウォツク"
