--- a/source/localisation/rule_britannia_l_english.yml
+++ b/source/localisation/rule_britannia_l_english.yml
@@ -425,7 +425,7 @@
  anglican_rebels_demand_desc:0 "宗教的な反乱軍は$RELIGION$の信仰のために戦っている。彼らは、我々がその主権を認めるか、または最低でも、我々が改宗を試みるのを止め、平和に礼拝できる生活を送れるようになることを求めている。"
  divorce_consort_tooltip:1 "配偶者と離婚します。\n王室間の婚姻は終了しません。"
  Alba:0 "アルバ"
- A_Battle_in_the_Highlands:0 "スコットランド高地の戦い"
+ A_Battle_in_the_Highlands:0 "ハイランドの戦い"
  Piper_Lead_Your_Clansmen:0 "一族を率いる笛吹き"
  NOT_ENOUGH_CONSORTS:0 "$VAL$未満の配偶者"
  ENOUGH_CONSORTS:0 "$VAL$の配偶者"
